TD-4648 Exporting to Xelatex characters not appear correct

--- a/src/Test/XeLatex/TestFiles/Expected/DropCap.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/DropCap.tex
@@ -20,17 +20,17 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\divzxx="Charis SIL" at 12pt
-\font\spanzxx="Charis SIL" at 12pt
-\font\picturepictureRight="Charis SIL" at 12pt
-\font\imgpicturedivpictureLeft="Charis SIL" at 12pt
-\font\scrBookscrBody="Charis SIL" at 12pt
-\font\columnsscrBookscrBody="Charis SIL" at 12pt
-\font\scrSectioncolumnsscrBookscrBody="Charis SIL" at 12pt
-\font\ParagraphscrSectioncolumnsscrBookscrBody="Charis SIL" at 12pt
-\font\ChapterNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/B" at 12pt
-\font\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL" at 6pt
-\font\spanzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL" at 12pt
+\font\divzxx="Charis SIL/GR" at 12pt
+\font\spanzxx="Charis SIL/GR" at 12pt
+\font\picturepictureRight="Charis SIL/GR" at 12pt
+\font\imgpicturedivpictureLeft="Charis SIL/GR" at 12pt
+\font\scrBookscrBody="Charis SIL/GR" at 12pt
+\font\columnsscrBookscrBody="Charis SIL/GR" at 12pt
+\font\scrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 12pt
+\font\ParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 12pt
+\font\ChapterNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR/B" at 12pt
+\font\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 6pt
+\font\spanzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 12pt
 
 \mbox{} 
 \newpage 
