--- a/src/Test/XeLatex/TestFiles/Expected/FlexRev.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FlexRev.tex
@@ -22,76 +22,76 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemhi="Annapurna SIL" at 10pt
-\font\xitemxitemcomplexformcomponentsbefore="Times New Roman" at 12pt
-\font\xitemxitemcomplexformentrytypebefore="Times New Roman" at 12pt
-\font\xitemxitemcomplexformrefheadwordbefore="Gautami" at 10pt
-\font\xitemxitemcomplexformrefsbefore="Times New Roman" at 12pt
-\font\xitemxitemdefinitionLebefore="Annapurna SIL" at 10pt
-\font\xitemxitemexamplebefore="Gautami/I" at 10pt
-\font\xitemxitemexamplesbefore="Times New Roman" at 12pt
-\font\xitemxitemmainentryrefbefore="Gautami/B" at 10pt
-\font\xitemxitemmorphformbefore="Gautami" at 10pt
-\font\xitemxitemprimaryrefsbefore="Times New Roman" at 12pt
-\font\xitemxitempronunciationformbefore="Tahoma" at 10pt
-\font\xitemxitempronunciationsbefore="Tahoma" at 10pt
-\font\sensesensesensesbefore="Times New Roman" at 12pt
-\font\letHeaddicBody="Times New Roman" at 12pt
-\font\letterletHeaddicBody="Gautami/B" at 24pt
-\font\letDatadicBody="Times New Roman" at 12pt
-\font\entryletDatadicBody="Times New Roman" at 10pt
-\font\reversalformLehientryletDatadicBody="Annapurna SIL/B" at 10pt
-\font\spanhireversalformLehientryletDatadicBody="Annapurna SIL/B" at 10pt
-\font\spanenreversalformLehientryletDatadicBody="Times New Roman/B" at 10pt
-\font\sensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanensensesentryletDatadicBody="Times New Roman" at 10pt
-\font\headrefggoTeluINsensesentryletDatadicBody="Gautami/B" at 10pt
-\font\revsensenumberenheadrefggoTeluINsensesentryletDatadicBody="Times New Roman/B" at 10pt
-\font\revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody="Gautami/B" at 10pt
-\font\SenseReferenceNumberenheadrefggoTeluINsensesentryletDatadicBody="Times New Roman/B" at 10pt
-\font\morphformggoTeluINsensesentryletDatadicBody="Gautami" at 10pt
-\font\spanenmorphformggoTeluINsensesentryletDatadicBody="Times New Roman" at 10pt
-\font\xitemhimorphformggoTeluINsensesentryletDatadicBody="Annapurna SIL" at 10pt
-\font\spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody="Gautami" at 10pt
-\font\pronunciationssensesentryletDatadicBody="Tahoma" at 10pt
-\font\spanenpronunciationssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\pronunciationpronunciationssensesentryletDatadicBody="Tahoma" at 10pt
-\font\pronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Tahoma" at 10pt
-\font\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Tahoma" at 10pt
-\font\grammaticalinfosensesentryletDatadicBody="Times New Roman/I" at 10pt
-\font\spanengrammaticalinfosensesentryletDatadicBody="Times New Roman/I" at 10pt
-\font\partofspeechLehigrammaticalinfosensesentryletDatadicBody="Annapurna SIL/I" at 10pt
-\font\spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody="Times New Roman/I" at 10pt
-\font\definitionLehisensesentryletDatadicBody="Annapurna SIL" at 10pt
-\font\spanendefinitionLehisensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanhidefinitionLehisensesentryletDatadicBody="Annapurna SIL" at 10pt
-\font\examplessensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanenexamplessensesentryletDatadicBody="Times New Roman" at 10pt
-\font\exampleggoTeluINexamplessensesentryletDatadicBody="Gautami/I" at 10pt
-\font\spanenexampleggoTeluINexamplessensesentryletDatadicBody="Times New Roman/I" at 10pt
-\font\spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody="Gautami/I" at 10pt
-\font\primaryrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanenprimaryrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\complexformprimaryrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\complexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\LexEntryTypepublishAbbreviationForReversalAbbreviationPubencomplexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanenLexEntryTypepublishAbbreviationForReversalAbbreviationPubencomplexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\complexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\acomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\mainentryrefggoTeluINacomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Gautami/B" at 10pt
-\font\spanenmainentryrefggoTeluINacomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/B" at 10pt
-\font\xitemexamplessensesentryletDatadicBody="Times New Roman" at 10pt
-\font\exampleggoTeluINxitemexamplessensesentryletDatadicBody="Gautami/I" at 10pt
-\font\spanenexampleggoTeluINxitemexamplessensesentryletDatadicBody="Times New Roman/I" at 10pt
-\font\spanggoTeluINexampleggoTeluINxitemexamplessensesentryletDatadicBody="Gautami/I" at 10pt
-\font\complexformrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanencomplexformrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\complexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\complexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanencomplexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman" at 10pt
-\font\complexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody="Gautami" at 10pt
-\font\spanencomplexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman" at 10pt
+\font\xitemhi="Annapurna SIL/GR" at 10pt
+\font\xitemxitemcomplexformcomponentsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcomplexformentrytypebefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcomplexformrefheadwordbefore="Gautami/GR" at 10pt
+\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionLebefore="Annapurna SIL/GR" at 10pt
+\font\xitemxitemexamplebefore="Gautami/GR/I" at 10pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemmainentryrefbefore="Gautami/GR/B" at 10pt
+\font\xitemxitemmorphformbefore="Gautami/GR" at 10pt
+\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationformbefore="Tahoma/GR" at 10pt
+\font\xitemxitempronunciationsbefore="Tahoma/GR" at 10pt
+\font\sensesensesensesbefore="Times New Roman/GR" at 12pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letterletHeaddicBody="Gautami/GR/B" at 24pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR" at 10pt
+\font\reversalformLehientryletDatadicBody="Annapurna SIL/GR/B" at 10pt
+\font\spanhireversalformLehientryletDatadicBody="Annapurna SIL/GR/B" at 10pt
+\font\spanenreversalformLehientryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanensensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\headrefggoTeluINsensesentryletDatadicBody="Gautami/GR/B" at 10pt
+\font\revsensenumberenheadrefggoTeluINsensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody="Gautami/GR/B" at 10pt
+\font\SenseReferenceNumberenheadrefggoTeluINsensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\morphformggoTeluINsensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\spanenmorphformggoTeluINsensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xitemhimorphformggoTeluINsensesentryletDatadicBody="Annapurna SIL/GR" at 10pt
+\font\spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\pronunciationssensesentryletDatadicBody="Tahoma/GR" at 10pt
+\font\spanenpronunciationssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pronunciationpronunciationssensesentryletDatadicBody="Tahoma/GR" at 10pt
+\font\pronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Tahoma/GR" at 10pt
+\font\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Tahoma/GR" at 10pt
+\font\grammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\spanengrammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\partofspeechLehigrammaticalinfosensesentryletDatadicBody="Annapurna SIL/GR/I" at 10pt
+\font\spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\definitionLehisensesentryletDatadicBody="Annapurna SIL/GR" at 10pt
+\font\spanendefinitionLehisensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanhidefinitionLehisensesentryletDatadicBody="Annapurna SIL/GR" at 10pt
+\font\examplessensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenexamplessensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\exampleggoTeluINexamplessensesentryletDatadicBody="Gautami/GR/I" at 10pt
+\font\spanenexampleggoTeluINexamplessensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody="Gautami/GR/I" at 10pt
+\font\primaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexEntryTypepublishAbbreviationForReversalAbbreviationPubencomplexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenLexEntryTypepublishAbbreviationForReversalAbbreviationPubencomplexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\acomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\mainentryrefggoTeluINacomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Gautami/GR/B" at 10pt
+\font\spanenmainentryrefggoTeluINacomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\xitemexamplessensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\exampleggoTeluINxitemexamplessensesentryletDatadicBody="Gautami/GR/I" at 10pt
+\font\spanenexampleggoTeluINxitemexamplessensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\spanggoTeluINexampleggoTeluINxitemexamplessensesentryletDatadicBody="Gautami/GR/I" at 10pt
+\font\complexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanencomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanencomplexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\spanencomplexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
 
 \mbox{} 
 \newpage 
