--- a/src/Test/XeLatex/TestFiles/Expected/FontFamily2a.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontFamily2a.tex
@@ -19,7 +19,7 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\a="Gentium" at 12pt
+\font\a="Gentium/GR" at 12pt
 
 \mbox{} 
 \newpage 
