--- a/src/Test/XeLatex/TestFiles/Expected/FontFamily5.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontFamily5.tex
@@ -19,12 +19,12 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\lettera="Times New Roman/B" at 24pt
-\font\letterb="Verdana/B" at 24pt
-\font\letterc="Gentium/B" at 24pt
-\font\letterd="Gentium/B" at 24pt
-\font\lettere="Times New Roman/B" at 24pt
-\font\letterf="Times New Roman/B" at 24pt
+\font\lettera="Times New Roman/GR/B" at 24pt
+\font\letterb="Verdana/GR/B" at 24pt
+\font\letterc="Gentium/GR/B" at 24pt
+\font\letterd="Gentium/GR/B" at 24pt
+\font\lettere="Times New Roman/GR/B" at 24pt
+\font\letterf="Times New Roman/GR/B" at 24pt
 
 \mbox{} 
 \newpage 
