--- a/src/Test/XeLatex/TestFiles/Expected/FootNote.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FootNote.tex
@@ -19,10 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\scriptureTextscrBody="Times New Roman" at 12pt
-\font\sectionscriptureTextscrBody="Times New Roman" at 12pt
-\font\psectionscriptureTextscrBody="Times New Roman" at 12pt
-\font\footnotepsectionscriptureTextscrBody="Times New Roman" at 9pt
+\font\scriptureTextscrBody="Times New Roman/GR" at 12pt
+\font\sectionscriptureTextscrBody="Times New Roman/GR" at 12pt
+\font\psectionscriptureTextscrBody="Times New Roman/GR" at 12pt
+\font\footnotepsectionscriptureTextscrBody="Times New Roman/GR" at 9pt
 
 \mbox{} 
 \newpage 
