--- a/src/Test/XeLatex/TestFiles/Expected/FootNoteMarker.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FootNoteMarker.tex
@@ -22,44 +22,44 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\divzxx="Gautami" at 12pt
-\font\spanzxx="Gautami" at 12pt
-\font\picturepictureRight="Gautami" at 12pt
-\font\imgpicturedivpictureLeft="Gautami" at 12pt
-\font\scrBookscrBody="Gautami" at 10pt
-\font\scrBookNamezxxscrBookscrBody="Gautami" at 10pt
-\font\scrBookCodezxxscrBookscrBody="Gautami" at 10pt
-\font\TitleMainscrBookscrBody="Gautami/B" at 20pt
-\font\spanzxxTitleMainscrBookscrBody="Gautami/B" at 20pt
-\font\TitleSecondaryzxxTitleMainscrBookscrBody="Gautami/B" at 20pt
-\font\columnsscrBookscrBody="Gautami" at 10pt
-\font\scrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\SectionHeadscrSectioncolumnsscrBookscrBody="Gautami/B" at 9pt
-\font\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody="Gautami/B" at 9pt
-\font\ParallelPassageReferencescrSectioncolumnsscrBookscrBody="Gautami/I" at 10pt
-\font\spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody="Gautami/I" at 10pt
-\font\ParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\ChapterNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Gautami/B" at 25pt
-\font\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 6pt
-\font\spanzxxParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\liscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\spanzxxliscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\VerseNumberzxxspanzxxliscrSectioncolumnsscrBookscrBody="Gautami" at 6pt
-\font\spanzxxspanzxxliscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\spanParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\NoteCrossHYPHENReferenceParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 8pt
-\font\NoteTargetReferencezxxNoteCrossHYPHENReferenceParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 8pt
-\font\spanzxxNoteCrossHYPHENReferenceParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 8pt
-\font\NoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 8pt
-\font\NoteTargetReferencezxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 8pt
-\font\ReferencedTextzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 8pt
-\font\spanzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami" at 8pt
-\font\LinebscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\VerseNumberzxxLinebscrSectioncolumnsscrBookscrBody="Gautami" at 6pt
-\font\spanzxxLinebscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\LinecscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\spanzxxLinecscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
-\font\rqzxxLinecscrSectioncolumnsscrBookscrBody="Gautami" at 10pt
+\font\divzxx="Gautami/GR" at 12pt
+\font\spanzxx="Gautami/GR" at 12pt
+\font\picturepictureRight="Gautami/GR" at 12pt
+\font\imgpicturedivpictureLeft="Gautami/GR" at 12pt
+\font\scrBookscrBody="Gautami/GR" at 10pt
+\font\scrBookNamezxxscrBookscrBody="Gautami/GR" at 10pt
+\font\scrBookCodezxxscrBookscrBody="Gautami/GR" at 10pt
+\font\TitleMainscrBookscrBody="Gautami/GR/B" at 20pt
+\font\spanzxxTitleMainscrBookscrBody="Gautami/GR/B" at 20pt
+\font\TitleSecondaryzxxTitleMainscrBookscrBody="Gautami/GR/B" at 20pt
+\font\columnsscrBookscrBody="Gautami/GR" at 10pt
+\font\scrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\SectionHeadscrSectioncolumnsscrBookscrBody="Gautami/GR/B" at 9pt
+\font\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody="Gautami/GR/B" at 9pt
+\font\ParallelPassageReferencescrSectioncolumnsscrBookscrBody="Gautami/GR/I" at 10pt
+\font\spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody="Gautami/GR/I" at 10pt
+\font\ParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\ChapterNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR/B" at 25pt
+\font\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 6pt
+\font\spanzxxParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\liscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\spanzxxliscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\VerseNumberzxxspanzxxliscrSectioncolumnsscrBookscrBody="Gautami/GR" at 6pt
+\font\spanzxxspanzxxliscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\spanParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\NoteCrossHYPHENReferenceParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 8pt
+\font\NoteTargetReferencezxxNoteCrossHYPHENReferenceParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 8pt
+\font\spanzxxNoteCrossHYPHENReferenceParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 8pt
+\font\NoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 8pt
+\font\NoteTargetReferencezxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 8pt
+\font\ReferencedTextzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 8pt
+\font\spanzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody="Gautami/GR" at 8pt
+\font\LinebscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\VerseNumberzxxLinebscrSectioncolumnsscrBookscrBody="Gautami/GR" at 6pt
+\font\spanzxxLinebscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\LinecscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\spanzxxLinecscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
+\font\rqzxxLinecscrSectioncolumnsscrBookscrBody="Gautami/GR" at 10pt
 
 \mbox{} 
 \newpage 
