--- a/src/Test/XeLatex/TestFiles/Expected/GautamiFontTest.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/GautamiFontTest.tex
@@ -22,98 +22,98 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemhi="Arial Unicode MS" at 12pt
-\font\xitemte="Gautami" at 12pt
-\font\xitemxitemCmPossibilitypublishStemTransTypeAbbreviationPubbefore="Times New Roman" at 12pt
-\font\xitemxitemcomplexformrefsbefore="Times New Roman" at 12pt
-\font\xitemxitemdefinitionbefore="Times New Roman" at 13pt
-\font\xitemxitemdefinitionLcbefore="Times New Roman" at 12pt
-\font\xitemxitemdefinitionLdbefore="Times New Roman" at 12pt
-\font\xitemxitementryrefcomponentbefore="Times New Roman" at 13pt
-\font\xitemxitementryreftypebefore="Times New Roman" at 13pt
-\font\xitemxitemexamplebefore="Gautami/I":color=0000FF at 12pt
-\font\xitemxitemexamplesbefore="Times New Roman" at 12pt
-\font\xitemxitemheadwordbefore="Gautami/B" at 13pt
-\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Gautami/B" at 13pt
-\font\xitemxitemLexSensepublishStemDefinitionPubbefore="Times New Roman" at 12pt
-\font\xitemxitemLexSensepublishStemDefinitionPubLdbefore="Times New Roman" at 12pt
-\font\xitemxitemprimaryrefsbefore="Times New Roman" at 12pt
-\font\xitemxitempronunciationbefore="Tahoma" at 13pt
-\font\xitemxitempronunciationsbefore="Times New Roman" at 12pt
-\font\xitemxitemsemanticdomainsbefore="Times New Roman" at 12pt
-\font\sensesensesensesbefore="Times New Roman" at 13pt
-\font\xitemxitemtranslationbefore="Times New Roman" at 13pt
-\font\xitemxitemtranslationLdbefore="Gautami" at 12pt
-\font\xitemxitemcrossrefbefore="Times New Roman" at 13pt
-\font\xitemxitemcrossreftargetsbefore="Times New Roman" at 13pt
-\font\xitemxitemcrossreftypebefore="Times New Roman" at 13pt
-\font\xitemxitemheadwordminorbefore="Times New Roman" at 13pt
-\font\xitemxitemmainentryrefbefore="Times New Roman" at 13pt
-\font\xitemxitemmainentryrefminorbefore="Times New Roman" at 13pt
-\font\xitemxitempronunciationminorbefore="Times New Roman" at 13pt
-\font\xitemxitemsensecrossrefbefore="Times New Roman" at 12pt
-\font\xitemxitemsensemainentryrefbefore="Times New Roman" at 13pt
-\font\letHeaddicBody="Times New Roman" at 16pt
-\font\letterletHeaddicBody="Gautami/B" at 16pt
-\font\letDatadicBody="Times New Roman" at 13pt
-\font\entryletDatadicBody="Times New Roman" at 13pt
-\font\headwordggoTeluINentryletDatadicBody="Gautami/B" at 13pt
-\font\headwordafterentryletDatadicBody="Gautami/B" at 13pt
-\font\spanenheadwordggoTeluINentryletDatadicBody="Times New Roman/B" at 13pt
-\font\spanentryletDatadicBody="Times New Roman" at 13pt
-\font\pronunciationggofonipaxemicspanentryletDatadicBody="Tahoma" at 13pt
-\font\spanenpronunciationggofonipaxemicspanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody="Tahoma" at 13pt
-\font\spanenspanentryletDatadicBody="Times New Roman" at 13pt
-\font\sensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\grammaticalinfosensespanentryletDatadicBody="Times New Roman/BI":color=800080 at 13pt
-\font\grammaticalinfoaftersensespanentryletDatadicBody="Times New Roman/BI":color=800080 at 13pt
-\font\partofspeechengrammaticalinfosensespanentryletDatadicBody="Times New Roman/BI":color=800080 at 13pt
-\font\spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody="Times New Roman/BI":color=800080 at 13pt
-\font\spanengrammaticalinfosensespanentryletDatadicBody="Times New Roman/BI":color=800080 at 13pt
-\font\definitionensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanendefinitionensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\LexSensepublishStemDefinitionPubensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanenLexSensepublishStemDefinitionPubensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\LexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\xitemenLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanenxitemenLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\xitemhiLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Arial Unicode MS" at 13pt
-\font\spanhixitemhiLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Arial Unicode MS" at 13pt
-\font\xitemteLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Gautami" at 13pt
-\font\spantexitemteLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Gautami" at 13pt
-\font\spansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\exampleggoTeluINspansensespanentryletDatadicBody="Gautami/I":color=0000FF at 12pt
-\font\examplebeforespansensespanentryletDatadicBody="Gautami/I":color=0000FF at 12pt
-\font\exampleafterspansensespanentryletDatadicBody="Gautami/I":color=0000FF at 12pt
-\font\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody="Gautami/I":color=0000FF at 13pt
-\font\spanenexampleggoTeluINspansensespanentryletDatadicBody="Times New Roman/I":color=0000FF at 13pt
-\font\spanspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanspanspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\CmPossibilitypublishStemTransTypeAbbreviationPubenspanspanspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenspanspanspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\CmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanenCmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanenspanspanspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\translationLdtespanspansensespanentryletDatadicBody="Gautami" at 13pt
-\font\spantetranslationLdtespanspansensespanentryletDatadicBody="Gautami" at 13pt
-\font\spanentranslationLdtespanspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanenspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\semanticdomainabbrenspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanensemanticdomainabbrenspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\semanticdomainnameenspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanensemanticdomainnameenspansensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\definitionLdensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\xitemendefinitionLdensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanenxitemendefinitionLdensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanendefinitionLdensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\xitemtedefinitionLdensensespanentryletDatadicBody="Gautami" at 13pt
-\font\spantexitemtedefinitionLdensensespanentryletDatadicBody="Gautami" at 13pt
-\font\LexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\xitemenLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\spanenxitemenLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Times New Roman" at 13pt
-\font\xitemteLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Gautami" at 13pt
-\font\spantexitemteLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Gautami" at 13pt
+\font\xitemhi="Arial Unicode MS/GR" at 12pt
+\font\xitemte="Gautami/GR" at 12pt
+\font\xitemxitemCmPossibilitypublishStemTransTypeAbbreviationPubbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemdefinitionLcbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionLdbefore="Times New Roman/GR" at 12pt
+\font\xitemxitementryrefcomponentbefore="Times New Roman/GR" at 13pt
+\font\xitemxitementryreftypebefore="Times New Roman/GR" at 13pt
+\font\xitemxitemexamplebefore="Gautami/GR/I":color=0000FF at 12pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemheadwordbefore="Gautami/GR/B" at 13pt
+\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Gautami/GR/B" at 13pt
+\font\xitemxitemLexSensepublishStemDefinitionPubbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemLexSensepublishStemDefinitionPubLdbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationbefore="Tahoma/GR" at 13pt
+\font\xitemxitempronunciationsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemsemanticdomainsbefore="Times New Roman/GR" at 12pt
+\font\sensesensesensesbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemtranslationbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemtranslationLdbefore="Gautami/GR" at 12pt
+\font\xitemxitemcrossrefbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemcrossreftargetsbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemcrossreftypebefore="Times New Roman/GR" at 13pt
+\font\xitemxitemheadwordminorbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemmainentryrefbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemmainentryrefminorbefore="Times New Roman/GR" at 13pt
+\font\xitemxitempronunciationminorbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemsensecrossrefbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemsensemainentryrefbefore="Times New Roman/GR" at 13pt
+\font\letHeaddicBody="Times New Roman/GR" at 16pt
+\font\letterletHeaddicBody="Gautami/GR/B" at 16pt
+\font\letDatadicBody="Times New Roman/GR" at 13pt
+\font\entryletDatadicBody="Times New Roman/GR" at 13pt
+\font\headwordggoTeluINentryletDatadicBody="Gautami/GR/B" at 13pt
+\font\headwordafterentryletDatadicBody="Gautami/GR/B" at 13pt
+\font\spanenheadwordggoTeluINentryletDatadicBody="Times New Roman/GR/B" at 13pt
+\font\spanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\pronunciationggofonipaxemicspanentryletDatadicBody="Tahoma/GR" at 13pt
+\font\spanenpronunciationggofonipaxemicspanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody="Tahoma/GR" at 13pt
+\font\spanenspanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\sensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\grammaticalinfosensespanentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\grammaticalinfoaftersensespanentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\partofspeechengrammaticalinfosensespanentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\spanengrammaticalinfosensespanentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\definitionensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanendefinitionensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\LexSensepublishStemDefinitionPubensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenLexSensepublishStemDefinitionPubensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\LexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemenLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenxitemenLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemhiLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Arial Unicode MS/GR" at 13pt
+\font\spanhixitemhiLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Arial Unicode MS/GR" at 13pt
+\font\xitemteLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Gautami/GR" at 13pt
+\font\spantexitemteLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Gautami/GR" at 13pt
+\font\spansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\exampleggoTeluINspansensespanentryletDatadicBody="Gautami/GR/I":color=0000FF at 12pt
+\font\examplebeforespansensespanentryletDatadicBody="Gautami/GR/I":color=0000FF at 12pt
+\font\exampleafterspansensespanentryletDatadicBody="Gautami/GR/I":color=0000FF at 12pt
+\font\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody="Gautami/GR/I":color=0000FF at 13pt
+\font\spanenexampleggoTeluINspansensespanentryletDatadicBody="Times New Roman/GR/I":color=0000FF at 13pt
+\font\spanspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanspanspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\CmPossibilitypublishStemTransTypeAbbreviationPubenspanspanspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenspanspanspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\CmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenCmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenspanspanspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\translationLdtespanspansensespanentryletDatadicBody="Gautami/GR" at 13pt
+\font\spantetranslationLdtespanspansensespanentryletDatadicBody="Gautami/GR" at 13pt
+\font\spanentranslationLdtespanspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\semanticdomainabbrenspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanensemanticdomainabbrenspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\semanticdomainnameenspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanensemanticdomainnameenspansensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\definitionLdensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemendefinitionLdensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenxitemendefinitionLdensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanendefinitionLdensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemtedefinitionLdensensespanentryletDatadicBody="Gautami/GR" at 13pt
+\font\spantexitemtedefinitionLdensensespanentryletDatadicBody="Gautami/GR" at 13pt
+\font\LexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemenLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenxitemenLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemteLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Gautami/GR" at 13pt
+\font\spantexitemteLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Gautami/GR" at 13pt
 
 \mbox{} 
 \newpage 
