--- a/src/Test/XeLatex/TestFiles/Expected/HashSymbol.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/HashSymbol.tex
@@ -20,39 +20,39 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Times New Roman" at 12pt
-\font\letterletHeaddicBody="Gautami/B" at 24pt
-\font\letDatadicBody="Times New Roman" at 12pt
-\font\entryletDatadicBody="Times New Roman" at 10pt
-\font\pictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\picturepictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\pictureCaptionpictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\pictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\headwordggoTeluxINentryletDatadicBody="Gautami" at 10pt
-\font\pronunciationsentryletDatadicBody="Times New Roman" at 10pt
-\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Tahoma" at 10pt
-\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Tahoma" at 10pt
-\font\sensesentryletDatadicBody="Times New Roman" at 10pt
-\font\sensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\xsensenumbersensesentryletDatadicBody="Times New Roman" at 10pt
-\font\definitionensensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\LexSensepublishStemGlossPubensensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\examplessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\exampleggoTeluxINexamplessensesensesentryletDatadicBody="Gautami" at 10pt
-\font\spanggoTeluxINexampleggoTeluxINexamplessensesensesentryletDatadicBody="Gautami" at 10pt
-\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\translationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\xitementranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanenxitementranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\xitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Gautami" at 10pt
-\font\spantexitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Gautami" at 10pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letterletHeaddicBody="Gautami/GR/B" at 24pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\picturepictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\headwordggoTeluxINentryletDatadicBody="Gautami/GR" at 10pt
+\font\pronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Tahoma/GR" at 10pt
+\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Tahoma/GR" at 10pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xsensenumbersensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\definitionensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexSensepublishStemGlossPubensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\examplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\exampleggoTeluxINexamplessensesensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\spanggoTeluxINexampleggoTeluxINexamplessensesensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\translationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xitementranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenxitementranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\spantexitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Gautami/GR" at 10pt
 
 \mbox{} 
 \newpage 
