--- a/src/Test/XeLatex/TestFiles/Expected/ListSmall.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/ListSmall.tex
@@ -19,12 +19,12 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\section="Times New Roman" at 12pt
-\font\olsection="Times New Roman" at 12pt
-\font\liolsection="Times New Roman" at 12pt
-\font\ulliolsection="Times New Roman" at 12pt
-\font\liulliolsection="Times New Roman" at 12pt
-\font\psection="Times New Roman" at 12pt
+\font\section="Times New Roman/GR" at 12pt
+\font\olsection="Times New Roman/GR" at 12pt
+\font\liolsection="Times New Roman/GR" at 12pt
+\font\ulliolsection="Times New Roman/GR" at 12pt
+\font\liulliolsection="Times New Roman/GR" at 12pt
+\font\psection="Times New Roman/GR" at 12pt
 
 \mbox{} 
 \newpage 
