--- a/src/Test/XeLatex/TestFiles/Expected/NestedDivCase2.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/NestedDivCase2.tex
@@ -19,10 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Times New Roman":color=ff0000 at 20pt
-\font\tbta="Times New Roman":color=0000ff at 20pt
-\font\tctbta="Arial":color=008000 at 13pt
-\font\tdta="Times New Roman":color=ffff00 at 20pt
+\font\ta="Times New Roman/GR":color=ff0000 at 20pt
+\font\tbta="Times New Roman/GR":color=0000ff at 20pt
+\font\tctbta="Arial/GR":color=008000 at 13pt
+\font\tdta="Times New Roman/GR":color=ffff00 at 20pt
 
 \mbox{} 
 \newpage 
