--- a/src/Test/XeLatex/TestFiles/Expected/NestedDivCase3.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/NestedDivCase3.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Times New Roman":color=ff0000 at 20pt
-\font\tcta="Arial":color=008000 at 13pt
-\font\tdtcta="Arial":color=ffff00 at 13pt
+\font\ta="Times New Roman/GR":color=ff0000 at 20pt
+\font\tcta="Arial/GR":color=008000 at 13pt
+\font\tdtcta="Arial/GR":color=ffff00 at 13pt
 
 \mbox{} 
 \newpage 
