--- a/src/Test/XeLatex/TestFiles/Expected/PaddingLeft.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/PaddingLeft.tex
@@ -19,15 +19,15 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\p="Times New Roman" at 12pt
-\font\ppaddingc="Times New Roman" at 12pt
-\font\ppaddingf="Times New Roman" at 12pt
-\font\ppaddingba="Times New Roman" at 12pt
-\font\ppaddingbc="Times New Roman" at 12pt
-\font\ppaddingbe="Times New Roman" at 12pt
-\font\ppaddingbg="Times New Roman" at 12pt
-\font\pnopadding="Times New Roman" at 12pt
-\font\ppadding="Times New Roman" at 12pt
+\font\p="Times New Roman/GR" at 12pt
+\font\ppaddingc="Times New Roman/GR" at 12pt
+\font\ppaddingf="Times New Roman/GR" at 12pt
+\font\ppaddingba="Times New Roman/GR" at 12pt
+\font\ppaddingbc="Times New Roman/GR" at 12pt
+\font\ppaddingbe="Times New Roman/GR" at 12pt
+\font\ppaddingbg="Times New Roman/GR" at 12pt
+\font\pnopadding="Times New Roman/GR" at 12pt
+\font\ppadding="Times New Roman/GR" at 12pt
 
 \mbox{} 
 \newpage 
