--- a/src/Test/XeLatex/TestFiles/Expected/PictureWidth.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/PictureWidth.tex
@@ -22,68 +22,68 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Times New Roman" at 12pt
-\font\letterletHeaddicBody="Times New Roman/B" at 24pt
-\font\letDatadicBody="Times New Roman" at 12pt
-\font\entryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\pictureRightentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\picturepictureRightentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\pictureCaptionpictureRightentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\CmPicturepublishStemCaptionSenseNumberpictureCaptionpictureRightentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\CmPicturepublishStemCaptionCaptionPubptpictureCaptionpictureRightentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\headwordsehentryletDatadicBody="Times New Roman/B":color=0000FF at 10pt
-\font\headwordafterentryletDatadicBody="Times New Roman/B":color=0000FF at 10pt
-\font\sensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\sensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\partofspeechptgrammaticalinfosensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\definitionLcptsensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\xitemptdefinitionLcptsensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\xlanguagetagenxitemptdefinitionLcptsensesensesentryletDatadicBody="Times New Roman":color=2F60FF at 8pt
-\font\xitemendefinitionLcptsensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\xlanguagetagenxitemendefinitionLcptsensesensesentryletDatadicBody="Times New Roman":color=2F60FF at 8pt
-\font\entrybletDatadicBody="Times New Roman" at 12pt
-\font\pictureRightentrybletDatadicBody="Times New Roman" at 12pt
-\font\picturepictureRightentrybletDatadicBody="Times New Roman" at 12pt
-\font\pictureCaptionpictureRightentrybletDatadicBody="Times New Roman" at 12pt
-\font\CmPicturepublishStemCaptionSenseNumberpictureCaptionpictureRightentrybletDatadicBody="Times New Roman" at 12pt
-\font\CmPicturepublishStemCaptionCaptionPubptpictureCaptionpictureRightentrybletDatadicBody="Times New Roman" at 12pt
-\font\headwordsehentrybletDatadicBody="Times New Roman/B":color=0000FF at 10pt
-\font\headwordafterentrybletDatadicBody="Times New Roman/B":color=0000FF at 10pt
-\font\sensesentrybletDatadicBody="Times New Roman" at 12pt
-\font\sensesensesentrybletDatadicBody="Times New Roman" at 12pt
-\font\grammaticalinfosensesensesentrybletDatadicBody="Times New Roman" at 12pt
-\font\partofspeechptgrammaticalinfosensesensesentrybletDatadicBody="Times New Roman" at 12pt
-\font\definitionLcptsensesensesentrybletDatadicBody="Times New Roman" at 12pt
-\font\xitemptdefinitionLcptsensesensesentrybletDatadicBody="Times New Roman" at 12pt
-\font\xlanguagetagenxitemptdefinitionLcptsensesensesentrybletDatadicBody="Times New Roman":color=2F60FF at 8pt
-\font\xitemendefinitionLcptsensesensesentrybletDatadicBody="Times New Roman" at 12pt
-\font\xlanguagetagenxitemendefinitionLcptsensesensesentrybletDatadicBody="Times New Roman":color=2F60FF at 8pt
-\font\relationssensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\lexreftargetsrelationssensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\sensecrossrefsehlexreftargetsrelationssensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\definitionptsensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\xlanguagetagendefinitionptsensesensesentryletDatadicBody="Times New Roman":color=2F60FF at 8pt
-\font\examplessensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\examplesehexamplessensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\translationpttranslationsexamplessensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\xlanguagetagentranslationpttranslationsexamplessensesensesentryletDatadicBody="Times New Roman":color=2F60FF at 8pt
-\font\xitemrelationssensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\lexreftargetsxitemrelationssensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\sensecrossrefsehlexreftargetsxitemrelationssensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\xhomographnumberptheadwordsehentryletDatadicBody="Times New Roman/B":color=0000FF at 10pt
-\font\xsensenumberLcensensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\definitionLcensensesensesentryletDatadicBody="Times New Roman":color=000000 at 11pt
-\font\xlanguagetagendefinitionLcensensesensesentryletDatadicBody="Times New Roman":color=2F60FF at 8pt
-\font\entrycletDatadicBody="Times New Roman" at 12pt
-\font\pictureRightNoneentrycletDatadicBody="Times New Roman" at 12pt
-\font\picturepictureRightNoneentrycletDatadicBody="Times New Roman" at 12pt
-\font\pictureCaptionpictureRightNoneentrycletDatadicBody="Times New Roman" at 12pt
-\font\CmPicturepublishStemCaptionSenseNumberpictureCaptionpictureRightNoneentrycletDatadicBody="Times New Roman" at 12pt
-\font\CmPicturepublishStemCaptionCaptionPubptpictureCaptionpictureRightNoneentrycletDatadicBody="Times New Roman" at 12pt
-\font\headwordsehentrycletDatadicBody="Times New Roman/B":color=0000FF at 10pt
-\font\headwordafterentrycletDatadicBody="Times New Roman/B":color=0000FF at 10pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letterletHeaddicBody="Times New Roman/GR/B" at 24pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\pictureRightentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\picturepictureRightentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\pictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\CmPicturepublishStemCaptionSenseNumberpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\CmPicturepublishStemCaptionCaptionPubptpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\headwordsehentryletDatadicBody="Times New Roman/GR/B":color=0000FF at 10pt
+\font\headwordafterentryletDatadicBody="Times New Roman/GR/B":color=0000FF at 10pt
+\font\sensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\sensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\partofspeechptgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\definitionLcptsensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\xitemptdefinitionLcptsensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\xlanguagetagenxitemptdefinitionLcptsensesensesentryletDatadicBody="Times New Roman/GR":color=2F60FF at 8pt
+\font\xitemendefinitionLcptsensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\xlanguagetagenxitemendefinitionLcptsensesensesentryletDatadicBody="Times New Roman/GR":color=2F60FF at 8pt
+\font\entrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\pictureRightentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\picturepictureRightentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\pictureCaptionpictureRightentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\CmPicturepublishStemCaptionSenseNumberpictureCaptionpictureRightentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\CmPicturepublishStemCaptionCaptionPubptpictureCaptionpictureRightentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\headwordsehentrybletDatadicBody="Times New Roman/GR/B":color=0000FF at 10pt
+\font\headwordafterentrybletDatadicBody="Times New Roman/GR/B":color=0000FF at 10pt
+\font\sensesentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\sensesensesentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\grammaticalinfosensesensesentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\partofspeechptgrammaticalinfosensesensesentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\definitionLcptsensesensesentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\xitemptdefinitionLcptsensesensesentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\xlanguagetagenxitemptdefinitionLcptsensesensesentrybletDatadicBody="Times New Roman/GR":color=2F60FF at 8pt
+\font\xitemendefinitionLcptsensesensesentrybletDatadicBody="Times New Roman/GR" at 12pt
+\font\xlanguagetagenxitemendefinitionLcptsensesensesentrybletDatadicBody="Times New Roman/GR":color=2F60FF at 8pt
+\font\relationssensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\lexreftargetsrelationssensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\sensecrossrefsehlexreftargetsrelationssensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\definitionptsensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\xlanguagetagendefinitionptsensesensesentryletDatadicBody="Times New Roman/GR":color=2F60FF at 8pt
+\font\examplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\examplesehexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\translationpttranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\xlanguagetagentranslationpttranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=2F60FF at 8pt
+\font\xitemrelationssensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\lexreftargetsxitemrelationssensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\sensecrossrefsehlexreftargetsxitemrelationssensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\xhomographnumberptheadwordsehentryletDatadicBody="Times New Roman/GR/B":color=0000FF at 10pt
+\font\xsensenumberLcensensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\definitionLcensensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 11pt
+\font\xlanguagetagendefinitionLcensensesensesentryletDatadicBody="Times New Roman/GR":color=2F60FF at 8pt
+\font\entrycletDatadicBody="Times New Roman/GR" at 12pt
+\font\pictureRightNoneentrycletDatadicBody="Times New Roman/GR" at 12pt
+\font\picturepictureRightNoneentrycletDatadicBody="Times New Roman/GR" at 12pt
+\font\pictureCaptionpictureRightNoneentrycletDatadicBody="Times New Roman/GR" at 12pt
+\font\CmPicturepublishStemCaptionSenseNumberpictureCaptionpictureRightNoneentrycletDatadicBody="Times New Roman/GR" at 12pt
+\font\CmPicturepublishStemCaptionCaptionPubptpictureCaptionpictureRightNoneentrycletDatadicBody="Times New Roman/GR" at 12pt
+\font\headwordsehentrycletDatadicBody="Times New Roman/GR/B":color=0000FF at 10pt
+\font\headwordafterentrycletDatadicBody="Times New Roman/GR/B":color=0000FF at 10pt
 
 \mbox{} 
 \newpage 
