--- a/src/Test/XeLatex/TestFiles/Expected/PrecedesPseudoLangTest.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/PrecedesPseudoLangTest.tex
@@ -19,26 +19,26 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\pronunciationenUKpronunciationbefore="Times New Roman" at 20pt
-\font\pronunciationenUSpronunciationbefore="Times New Roman" at 20pt
-\font\sectionletterdictionary="Times New Roman" at 10pt
-\font\headsectionletterdictionary="Times New Roman" at 10pt
-\font\articledictionary="Times New Roman" at 10pt
-\font\firstoftypeheadwordlastoftypearticledictionary="Times New Roman" at 10pt
-\font\firstoftypegrammarrequireslastoftypearticledictionary="Times New Roman" at 10pt
-\font\firstoftypelastoftyperelationsynonymarticledictionary="Times New Roman" at 10pt
-\font\firstoftypepronunciationenUKarticledictionary="Times New Roman" at 20pt
-\font\lastoftypepronunciationenUSarticledictionary="Times New Roman" at 20pt
-\font\pronunciationenUSpronunciationbeforearticledictionary="Times New Roman" at 20pt
-\font\lastoftypepronunciationenUKarticledictionary="Times New Roman" at 20pt
-\font\pronunciationenUKpronunciationbeforearticledictionary="Times New Roman" at 20pt
-\font\firstoftypegrammarcategorylastoftypearticledictionary="Times New Roman" at 10pt
-\font\definitionfirstoftypelastoftypearticledictionary="Times New Roman" at 10pt
-\font\firstoftypelastoftypenotearticledictionary="Times New Roman" at 10pt
-\font\exampleusefirstoftypearticledictionary="Times New Roman" at 10pt
-\font\examplefirstoftypearticledictionary="Times New Roman" at 10pt
-\font\exampleuselastoftypearticledictionary="Times New Roman" at 10pt
-\font\examplelastoftypearticledictionary="Times New Roman" at 10pt
+\font\pronunciationenUKpronunciationbefore="Times New Roman/GR" at 20pt
+\font\pronunciationenUSpronunciationbefore="Times New Roman/GR" at 20pt
+\font\sectionletterdictionary="Times New Roman/GR" at 10pt
+\font\headsectionletterdictionary="Times New Roman/GR" at 10pt
+\font\articledictionary="Times New Roman/GR" at 10pt
+\font\firstoftypeheadwordlastoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\firstoftypegrammarrequireslastoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\firstoftypelastoftyperelationsynonymarticledictionary="Times New Roman/GR" at 10pt
+\font\firstoftypepronunciationenUKarticledictionary="Times New Roman/GR" at 20pt
+\font\lastoftypepronunciationenUSarticledictionary="Times New Roman/GR" at 20pt
+\font\pronunciationenUSpronunciationbeforearticledictionary="Times New Roman/GR" at 20pt
+\font\lastoftypepronunciationenUKarticledictionary="Times New Roman/GR" at 20pt
+\font\pronunciationenUKpronunciationbeforearticledictionary="Times New Roman/GR" at 20pt
+\font\firstoftypegrammarcategorylastoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\definitionfirstoftypelastoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\firstoftypelastoftypenotearticledictionary="Times New Roman/GR" at 10pt
+\font\exampleusefirstoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\examplefirstoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\exampleuselastoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\examplelastoftypearticledictionary="Times New Roman/GR" at 10pt
 
 \mbox{} 
 \newpage 
