--- a/src/Test/XeLatex/TestFiles/Expected/PrecedesPseudoTestB.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/PrecedesPseudoTestB.tex
@@ -19,30 +19,30 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\pronunciationenUSpronunciationarticlebefore="Times New Roman/I":color=008000 at 20pt
-\font\pronunciationenUKpronunciationenUSbefore="Times New Roman/I":color=0000ff at 20pt
-\font\pronunciationenUSfirstoftypebefore="Times New Roman" at 12pt
-\font\pronunciationenUSpronunciationbefore="Times New Roman/I":color=008000 at 20pt
-\font\pronunciationenUSbefore="Times New Roman" at 12pt
-\font\sectionletterdictionary="Times New Roman" at 10pt
-\font\headsectionletterdictionary="Times New Roman" at 10pt
-\font\articledictionary="Times New Roman" at 10pt
-\font\firstoftypeheadwordlastoftypearticledictionary="Times New Roman" at 10pt
-\font\firstoftypegrammarrequireslastoftypearticledictionary="Times New Roman" at 10pt
-\font\firstoftypelastoftyperelationsynonymarticledictionary="Times New Roman" at 10pt
-\font\firstoftypepronunciationenUKarticledictionary="Times New Roman/I":color=008000 at 20pt
-\font\pronunciationfirstoftypebeforearticledictionary="Times New Roman/I":color=008000 at 20pt
-\font\firstoftypepronunciationenUSarticledictionary="Times New Roman/I":color=008000 at 20pt
-\font\pronunciationenUSfirstoftypebeforearticledictionary="Times New Roman/I":color=008000 at 20pt
-\font\lastoftypepronunciationenUKarticledictionary="Times New Roman/I":color=008000 at 20pt
-\font\pronunciationenUKpronunciationenUSbeforearticledictionary="Times New Roman/I":color=0000ff at 20pt
-\font\firstoftypegrammarcategorylastoftypearticledictionary="Times New Roman" at 10pt
-\font\definitionfirstoftypelastoftypearticledictionary="Times New Roman" at 10pt
-\font\firstoftypelastoftypenotearticledictionary="Times New Roman" at 10pt
-\font\exampleusefirstoftypearticledictionary="Times New Roman" at 10pt
-\font\examplefirstoftypearticledictionary="Times New Roman" at 10pt
-\font\exampleuselastoftypearticledictionary="Times New Roman" at 10pt
-\font\examplelastoftypearticledictionary="Times New Roman" at 10pt
+\font\pronunciationenUSpronunciationarticlebefore="Times New Roman/GR/I":color=008000 at 20pt
+\font\pronunciationenUKpronunciationenUSbefore="Times New Roman/GR/I":color=0000ff at 20pt
+\font\pronunciationenUSfirstoftypebefore="Times New Roman/GR" at 12pt
+\font\pronunciationenUSpronunciationbefore="Times New Roman/GR/I":color=008000 at 20pt
+\font\pronunciationenUSbefore="Times New Roman/GR" at 12pt
+\font\sectionletterdictionary="Times New Roman/GR" at 10pt
+\font\headsectionletterdictionary="Times New Roman/GR" at 10pt
+\font\articledictionary="Times New Roman/GR" at 10pt
+\font\firstoftypeheadwordlastoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\firstoftypegrammarrequireslastoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\firstoftypelastoftyperelationsynonymarticledictionary="Times New Roman/GR" at 10pt
+\font\firstoftypepronunciationenUKarticledictionary="Times New Roman/GR/I":color=008000 at 20pt
+\font\pronunciationfirstoftypebeforearticledictionary="Times New Roman/GR/I":color=008000 at 20pt
+\font\firstoftypepronunciationenUSarticledictionary="Times New Roman/GR/I":color=008000 at 20pt
+\font\pronunciationenUSfirstoftypebeforearticledictionary="Times New Roman/GR/I":color=008000 at 20pt
+\font\lastoftypepronunciationenUKarticledictionary="Times New Roman/GR/I":color=008000 at 20pt
+\font\pronunciationenUKpronunciationenUSbeforearticledictionary="Times New Roman/GR/I":color=0000ff at 20pt
+\font\firstoftypegrammarcategorylastoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\definitionfirstoftypelastoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\firstoftypelastoftypenotearticledictionary="Times New Roman/GR" at 10pt
+\font\exampleusefirstoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\examplefirstoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\exampleuselastoftypearticledictionary="Times New Roman/GR" at 10pt
+\font\examplelastoftypearticledictionary="Times New Roman/GR" at 10pt
 
 \mbox{} 
 \newpage 
