--- a/src/Test/XeLatex/TestFiles/Expected/VerticalAlign.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/VerticalAlign.tex
@@ -20,36 +20,36 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemtpi="Times New Roman":color=000000 at 12pt
-\font\xitembzhfonipa="Times New Roman":color=000000 at 12pt
-\font\xitemxitemheadwordbefore="Times New Roman/B":color=000000 at 12pt
-\font\xitemxitemexamplesbefore="Times New Roman" at 12pt
-\font\xitemxitemexamplebefore="Times New Roman/I":color=000000 at 12pt
-\font\xitemxitemslotsbefore="Times New Roman" at 12pt
-\font\entrydicBody="Times New Roman":color=000000 at 12pt
-\font\letHeaddicBody="Times New Roman" at 12pt
-\font\letterletHeaddicBody="Times New Roman" at 12pt
-\font\letDatadicBody="Times New Roman" at 12pt
-\font\entryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\headwordbzhentryletDatadicBody="Times New Roman/B":color=000000 at 12pt
-\font\headwordafterentryletDatadicBody="Times New Roman/B":color=000000 at 12pt
-\font\examplesentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\examplesafterentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\examplebzhexamplesentryletDatadicBody="Times New Roman/I":color=000000 at 12pt
-\font\exampleafterexamplesentryletDatadicBody="Times New Roman/I":color=000000 at 12pt
-\font\xlanguagetagenexamplebzhexamplesentryletDatadicBody="Times New Roman/I":color=2F60FF at 8pt
-\font\translationsexamplesentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\translationentranslationsexamplesentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\xlanguagetagentranslationentranslationsexamplesentryletDatadicBody="Times New Roman":color=2F60FF at 8pt
-\font\relationstranslationsexamplesentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\xitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\lexreftypeenxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\lexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\xitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\sensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\xsensenumberensensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/B":color=000000 at 12pt
-\font\xitemxitemexamplesbeforelexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman":color=000000 at 12pt
-\font\xhomographnumberbzhsensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/B":color=000000 at 6.6pt
+\font\xitemtpi="Times New Roman/GR":color=000000 at 12pt
+\font\xitembzhfonipa="Times New Roman/GR":color=000000 at 12pt
+\font\xitemxitemheadwordbefore="Times New Roman/GR/B":color=000000 at 12pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemexamplebefore="Times New Roman/GR/I":color=000000 at 12pt
+\font\xitemxitemslotsbefore="Times New Roman/GR" at 12pt
+\font\entrydicBody="Times New Roman/GR":color=000000 at 12pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letterletHeaddicBody="Times New Roman/GR" at 12pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\headwordbzhentryletDatadicBody="Times New Roman/GR/B":color=000000 at 12pt
+\font\headwordafterentryletDatadicBody="Times New Roman/GR/B":color=000000 at 12pt
+\font\examplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\examplesafterentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\examplebzhexamplesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 12pt
+\font\exampleafterexamplesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 12pt
+\font\xlanguagetagenexamplebzhexamplesentryletDatadicBody="Times New Roman/GR/I":color=2F60FF at 8pt
+\font\translationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\translationentranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\xlanguagetagentranslationentranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=2F60FF at 8pt
+\font\relationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\xitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\lexreftypeenxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\lexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\xitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\sensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\xsensenumberensensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR/B":color=000000 at 12pt
+\font\xitemxitemexamplesbeforelexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\xhomographnumberbzhsensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR/B":color=000000 at 6.6pt
 
 \mbox{} 
 \newpage 
