--- a/src/Test/XeLatex/TestFiles/Expected/visibility.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/visibility.tex
@@ -20,10 +20,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Times New Roman" at 12pt
-\font\cletHeaddicBody="Times New Roman" at 12pt
-\font\aletHeaddicBody="Times New Roman":color=ff0000 at 12pt
-\font\bletHeaddicBody="Times New Roman" at 12pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\cletHeaddicBody="Times New Roman/GR" at 12pt
+\font\aletHeaddicBody="Times New Roman/GR":color=ff0000 at 12pt
+\font\bletHeaddicBody="Times New Roman/GR" at 12pt
 
 \mbox{} 
 \newpage 
