--- a/src/Test/XeLatex/TestFiles/Expected/BRTag.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/BRTag.tex
@@ -22,76 +22,76 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemte="Gautami" at 10pt
-\font\xitemhi="Arial Unicode MS" at 10pt
-\font\xitemxitemcomplexformformbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemcomplexformrefsbefore="Times New Roman" at 12pt
-\font\xitemxitemdefinitionbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitementryrefcomponentbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitementryreftypebefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemexamplebefore="Charis SIL/I":color=000000 at 8pt
-\font\xitemxitemexamplesbefore="Times New Roman" at 12pt
-\font\xitemxitemheadwordbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Gautami/B" at 9pt
-\font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemLexEntryTypepublishStemEntryTypeAbbreviationPubbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemLexSensepublishStemGlossPubLdbefore="Gautami" at 10pt
-\font\xitemxitemLexSensepublishStemGlossPubLebefore="Arial Unicode MS" at 10pt
-\font\xitemxitempartofspeechbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitempictureLabelbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemprimaryrefsbefore="Times New Roman" at 12pt
-\font\xitemxitempronunciationbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitempronunciationsbefore="Times New Roman" at 12pt
-\font\sensesensesensesbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemtranslationbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemtranslationLdbefore="Gautami" at 10pt
-\font\xitemxitemcrossrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemcrossreftargetsbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemcrossreftypebefore="Charis SIL/BI":color=000000 at 9pt
-\font\xitemxitemheadwordminorbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemmainentryrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemmainentryrefminorbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitempronunciationminorbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemsensecrossrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemsensemainentryrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemheadwordsubbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemLexEntrypublishRootMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemLexEntrypublishStemMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemtpi="Times New Roman" at 12pt
-\font\letHeaddicBody="Charis SIL/B":color=000000 at 14pt
-\font\letterletHeaddicBody="Charis SIL/B":color=000000 at 14pt
-\font\letDatadicBody="Times New Roman" at 9pt
-\font\entryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\headwordggoTeluINentryletDatadicBody="Gautami/B":color=000000 at 8pt
-\font\headwordafterentryletDatadicBody="Charis SIL/B":color=000000 at 8pt
-\font\spanenheadwordggoTeluINentryletDatadicBody="Times New Roman/B":color=000000 at 9pt
-\font\spanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\pronunciationggofonipaxemicspanentryletDatadicBody="Tahoma":color=000000 at 9pt
-\font\spanenpronunciationggofonipaxemicspanentryletDatadicBody="Times New Roman":color=000000 at 9pt
-\font\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody="Tahoma":color=000000 at 9pt
-\font\spanenspanentryletDatadicBody="Times New Roman":color=000000 at 9pt
-\font\sensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\grammaticalinfosensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\grammaticalinfoaftersensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\partofspeechengrammaticalinfosensespanentryletDatadicBody="Times New Roman/I":color=000000 at 9pt
-\font\spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody="Times New Roman/I":color=000000 at 9pt
-\font\spanengrammaticalinfosensespanentryletDatadicBody="Times New Roman/I":color=000000 at 9pt
-\font\definitionensensespanentryletDatadicBody="Times New Roman":color=000000 at 9pt
-\font\spanendefinitionensensespanentryletDatadicBody="Times New Roman":color=000000 at 9pt
-\font\LexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Gautami":color=000000 at 10pt
-\font\spanteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Gautami":color=000000 at 9pt
-\font\spanenLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Times New Roman":color=000000 at 9pt
-\font\spansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\exampleggoTeluINspansensespanentryletDatadicBody="Gautami/I":color=000000 at 8pt
-\font\examplebeforespansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\exampleafterspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody="Gautami/I":color=000000 at 9pt
-\font\spanenexampleggoTeluINspansensespanentryletDatadicBody="Times New Roman/I":color=000000 at 9pt
-\font\spanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\translationLdtespanspansensespanentryletDatadicBody="Gautami":color=000000 at 10pt
-\font\spantetranslationLdtespanspansensespanentryletDatadicBody="Gautami":color=000000 at 9pt
-\font\spanentranslationLdtespanspansensespanentryletDatadicBody="Times New Roman":color=000000 at 9pt
-\font\spanenspansensespanentryletDatadicBody="Times New Roman":color=000000 at 9pt
+\font\xitemte="Gautami/GR" at 10pt
+\font\xitemhi="Arial Unicode MS/GR" at 10pt
+\font\xitemxitemcomplexformformbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitementryrefcomponentbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitementryreftypebefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemexamplebefore="Charis SIL/GR/I":color=000000 at 8pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemheadwordbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Gautami/GR/B" at 9pt
+\font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemLexEntryTypepublishStemEntryTypeAbbreviationPubbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemLexSensepublishStemGlossPubLdbefore="Gautami/GR" at 10pt
+\font\xitemxitemLexSensepublishStemGlossPubLebefore="Arial Unicode MS/GR" at 10pt
+\font\xitemxitempartofspeechbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitempictureLabelbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitempronunciationsbefore="Times New Roman/GR" at 12pt
+\font\sensesensesensesbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemtranslationbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemtranslationLdbefore="Gautami/GR" at 10pt
+\font\xitemxitemcrossrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemcrossreftargetsbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemcrossreftypebefore="Charis SIL/GR/BI":color=000000 at 9pt
+\font\xitemxitemheadwordminorbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemmainentryrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemmainentryrefminorbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitempronunciationminorbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemsensecrossrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemsensemainentryrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemheadwordsubbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemLexEntrypublishRootMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemLexEntrypublishStemMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemtpi="Times New Roman/GR" at 12pt
+\font\letHeaddicBody="Charis SIL/GR/B":color=000000 at 14pt
+\font\letterletHeaddicBody="Charis SIL/GR/B":color=000000 at 14pt
+\font\letDatadicBody="Times New Roman/GR" at 9pt
+\font\entryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\headwordggoTeluINentryletDatadicBody="Gautami/GR/B":color=000000 at 8pt
+\font\headwordafterentryletDatadicBody="Charis SIL/GR/B":color=000000 at 8pt
+\font\spanenheadwordggoTeluINentryletDatadicBody="Times New Roman/GR/B":color=000000 at 9pt
+\font\spanentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\pronunciationggofonipaxemicspanentryletDatadicBody="Tahoma/GR":color=000000 at 9pt
+\font\spanenpronunciationggofonipaxemicspanentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody="Tahoma/GR":color=000000 at 9pt
+\font\spanenspanentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\sensespanentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\grammaticalinfosensespanentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\grammaticalinfoaftersensespanentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\partofspeechengrammaticalinfosensespanentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\spanengrammaticalinfosensespanentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\definitionensensespanentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanendefinitionensensespanentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\LexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Gautami/GR":color=000000 at 10pt
+\font\spanteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Gautami/GR":color=000000 at 9pt
+\font\spanenLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spansensespanentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\exampleggoTeluINspansensespanentryletDatadicBody="Gautami/GR/I":color=000000 at 8pt
+\font\examplebeforespansensespanentryletDatadicBody="Charis SIL/GR/I":color=000000 at 8pt
+\font\exampleafterspansensespanentryletDatadicBody="Charis SIL/GR/I":color=000000 at 8pt
+\font\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody="Gautami/GR/I":color=000000 at 9pt
+\font\spanenexampleggoTeluINspansensespanentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\spanspansensespanentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\translationLdtespanspansensespanentryletDatadicBody="Gautami/GR":color=000000 at 10pt
+\font\spantetranslationLdtespanspansensespanentryletDatadicBody="Gautami/GR":color=000000 at 9pt
+\font\spanentranslationLdtespanspansensespanentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanenspansensespanentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
 
 \mbox{} 
 \newpage 
