--- a/src/Test/XeLatex/TestFiles/Expected/Bidi.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Bidi.tex
@@ -22,34 +22,34 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\spanen="Times New Roman" at 12pt
-\font\spanur="Times New Roman":color=ff0000 at 12pt
-\font\diven="Times New Roman" at 12pt
-\font\divur="Times New Roman" at 12pt
-\font\xitemxitemdefinitionbefore="Times New Roman" at 12pt
-\font\xitemxitemexamplebefore="Scheherazade Graphite Alpha/I" at 12pt
-\font\xitemxitemexamplesbefore="Times New Roman" at 12pt
-\font\xitemxitemheadwordbefore="Scheherazade Graphite Alpha/B" at 12pt
-\font\xitemxitemheadwordminorbefore="Scheherazade Graphite Alpha/B" at 12pt
-\font\xitemxitemLexEntrypublishRootMinorPrimaryTargetHeadWordRefbefore="Scheherazade Graphite Alpha/B" at 12pt
-\font\xitemxitemlexreftargetsbefore="Times New Roman" at 12pt
-\font\letDatadicBody="Times New Roman" at 12pt
-\font\entryletDatadicBody="Times New Roman" at 12pt
-\font\headwordurentryletDatadicBody="Scheherazade Graphite Alpha/B":color=ff0000 at 12pt
-\font\xhomographnumberheadwordurentryletDatadicBody="Scheherazade Graphite Alpha/B":color=ff0000 at 6.6pt
-\font\spanenheadwordurentryletDatadicBody="Times New Roman/B":color=ff0000 at 12pt
-\font\sensesentryletDatadicBody="Times New Roman" at 12pt
-\font\sensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/I" at 12pt
-\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/I" at 12pt
-\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/I" at 12pt
-\font\slotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/I" at 12pt
-\font\spanenslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/I" at 12pt
-\font\slotnameenslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/I" at 12pt
-\font\spanenslotnameenslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/I" at 12pt
-\font\spanengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/I" at 12pt
-\font\definitionensensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman" at 12pt
+\font\spanen="Times New Roman/GR" at 12pt
+\font\spanur="Times New Roman/GR":color=ff0000 at 12pt
+\font\diven="Times New Roman/GR" at 12pt
+\font\divur="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemexamplebefore="Scheherazade Graphite Alpha/GR/I" at 12pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemheadwordbefore="Scheherazade Graphite Alpha/GR/B" at 12pt
+\font\xitemxitemheadwordminorbefore="Scheherazade Graphite Alpha/GR/B" at 12pt
+\font\xitemxitemLexEntrypublishRootMinorPrimaryTargetHeadWordRefbefore="Scheherazade Graphite Alpha/GR/B" at 12pt
+\font\xitemxitemlexreftargetsbefore="Times New Roman/GR" at 12pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR" at 12pt
+\font\headwordurentryletDatadicBody="Scheherazade Graphite Alpha/GR/B":color=ff0000 at 12pt
+\font\xhomographnumberheadwordurentryletDatadicBody="Scheherazade Graphite Alpha/GR/B":color=ff0000 at 6.6pt
+\font\spanenheadwordurentryletDatadicBody="Times New Roman/GR/B":color=ff0000 at 12pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
+\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
+\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
+\font\slotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
+\font\spanenslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
+\font\slotnameenslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
+\font\spanenslotnameenslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
+\font\spanengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
+\font\definitionensensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
 
 \mbox{} 
 \newpage 
