--- a/src/Test/XeLatex/TestFiles/Expected/Color.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Color.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\t="Times New Roman":color=ff0000 at 12pt
-\font\zt="Times New Roman":color=00FF00 at 12pt
-\font\wzt="Times New Roman":color=123abc at 12pt
+\font\t="Times New Roman/GR":color=ff0000 at 12pt
+\font\zt="Times New Roman/GR":color=00FF00 at 12pt
+\font\wzt="Times New Roman/GR":color=123abc at 12pt
 
 \mbox{} 
 \newpage 
