--- a/src/Test/XeLatex/TestFiles/Expected/ColumnCount.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/ColumnCount.tex
@@ -20,15 +20,15 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\revHeaderrevAppendix="Charis SIL/B" at 18pt
-\font\letDatarevAppendix="Times New Roman" at 12pt
-\font\entrybletDatarevAppendix="Times New Roman" at 12pt
-\font\revDatarevAppendix="Times New Roman" at 12pt
-\font\revEntryrevDatarevAppendix="Charis SIL" at 10pt
-\font\headwordenrevEntryrevDatarevAppendix="Charis SIL/B" at 11pt
-\font\revSensebssrevEntryrevDatarevAppendix="Charis SIL" at 10pt
-\font\revsensenumberrevSensebssrevEntryrevDatarevAppendix="Charis SIL" at 10pt
-\font\revhomographnumberrevSensebssrevEntryrevDatarevAppendix="Charis SIL" at 10pt
+\font\revHeaderrevAppendix="Charis SIL/GR/B" at 18pt
+\font\letDatarevAppendix="Times New Roman/GR" at 12pt
+\font\entrybletDatarevAppendix="Times New Roman/GR" at 12pt
+\font\revDatarevAppendix="Times New Roman/GR" at 12pt
+\font\revEntryrevDatarevAppendix="Charis SIL/GR" at 10pt
+\font\headwordenrevEntryrevDatarevAppendix="Charis SIL/GR/B" at 11pt
+\font\revSensebssrevEntryrevDatarevAppendix="Charis SIL/GR" at 10pt
+\font\revsensenumberrevSensebssrevEntryrevDatarevAppendix="Charis SIL/GR" at 10pt
+\font\revhomographnumberrevSensebssrevEntryrevDatarevAppendix="Charis SIL/GR" at 10pt
 
 \mbox{} 
 \newpage 
