--- a/src/Test/XeLatex/TestFiles/Expected/ColumnGap.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/ColumnGap.tex
@@ -20,9 +20,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letData="Times New Roman" at 12pt
-\font\xitem="Times New Roman" at 12pt
-\font\letxitem="Times New Roman" at 20pt
+\font\letData="Times New Roman/GR" at 12pt
+\font\xitem="Times New Roman/GR" at 12pt
+\font\letxitem="Times New Roman/GR" at 20pt
 
 \mbox{} 
 \newpage 
