--- a/src/Test/XeLatex/TestFiles/Expected/Counter1.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Counter1.tex
@@ -19,16 +19,16 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\sectionletter="Times New Roman" at 12pt
-\font\articlesectionletter="Times New Roman" at 12pt
-\font\sensearticlesectionletter="Times New Roman":color=0000ff at 12pt
-\font\sensebeforearticlesectionletter="Times New Roman":color=ff0000 at 12pt
-\font\firstoftypeheadwordlastoftypesectionletter="Times New Roman" at 12pt
-\font\firstoftypelastoftypepronunciationarticlesectionletter="Times New Roman" at 12pt
-\font\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter="Times New Roman" at 12pt
-\font\firstoftypegrammarcategorylastoftypesensearticlesectionletter="Times New Roman":color=0000ff at 12pt
-\font\exampleusefirstoftypelastoftypesensearticlesectionletter="Times New Roman":color=0000ff at 12pt
-\font\examplesensearticlesectionletter="Times New Roman":color=0000ff at 12pt
+\font\sectionletter="Times New Roman/GR" at 12pt
+\font\articlesectionletter="Times New Roman/GR" at 12pt
+\font\sensearticlesectionletter="Times New Roman/GR":color=0000ff at 12pt
+\font\sensebeforearticlesectionletter="Times New Roman/GR":color=ff0000 at 12pt
+\font\firstoftypeheadwordlastoftypesectionletter="Times New Roman/GR" at 12pt
+\font\firstoftypelastoftypepronunciationarticlesectionletter="Times New Roman/GR" at 12pt
+\font\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter="Times New Roman/GR" at 12pt
+\font\firstoftypegrammarcategorylastoftypesensearticlesectionletter="Times New Roman/GR":color=0000ff at 12pt
+\font\exampleusefirstoftypelastoftypesensearticlesectionletter="Times New Roman/GR":color=0000ff at 12pt
+\font\examplesensearticlesectionletter="Times New Roman/GR":color=0000ff at 12pt
 
 \mbox{} 
 \newpage 
