--- a/src/Test/XeLatex/TestFiles/Expected/Counter2.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Counter2.tex
@@ -19,24 +19,24 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\sectionletter="Times New Roman" at 12pt
-\font\articlesectionletter="Times New Roman/I" at 12pt
-\font\sensearticlesectionletter="Times New Roman/BI":color=0000ff at 12pt
-\font\sensebeforearticlesectionletter="Times New Roman/BI":color=ff0000 at 12pt
-\font\firstoftypegrammarcategorylastoftypesensearticlesectionletter="Times New Roman/BI":color=0000ff at 12pt
-\font\definitionfirstoftypelastoftypesensearticlesectionletter="Times New Roman/BI":color=0000ff at 12pt
-\font\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter="Times New Roman/BI":color=0000ff at 12pt
-\font\examplesensearticlesectionletter="Times New Roman/BI":color=0000ff at 12pt
-\font\firstoftypelastoftypesubentryarticlesectionletter="Times New Roman/I" at 12pt
-\font\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter="Times New Roman/I" at 12pt
-\font\examplefirstoftypelastoftypesubentryarticlesectionletter="Times New Roman/I" at 12pt
-\font\firstoftypeheadwordlastoftypearticlesectionletter="Times New Roman/I" at 12pt
-\font\firstoftypelastoftypepronunciationarticlesectionletter="Times New Roman/I" at 12pt
-\font\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter="Times New Roman/I" at 12pt
-\font\firstoftypevariantinflectionarticlesectionletter="Times New Roman/I" at 12pt
-\font\variantinflectionarticlesectionletter="Times New Roman/I" at 12pt
-\font\lastoftypevariantinflectionarticlesectionletter="Times New Roman/I" at 12pt
-\font\exampleusefirstoftypelastoftypesensearticlesectionletter="Times New Roman/BI":color=0000ff at 12pt
+\font\sectionletter="Times New Roman/GR" at 12pt
+\font\articlesectionletter="Times New Roman/GR/I" at 12pt
+\font\sensearticlesectionletter="Times New Roman/GR/BI":color=0000ff at 12pt
+\font\sensebeforearticlesectionletter="Times New Roman/GR/BI":color=ff0000 at 12pt
+\font\firstoftypegrammarcategorylastoftypesensearticlesectionletter="Times New Roman/GR/BI":color=0000ff at 12pt
+\font\definitionfirstoftypelastoftypesensearticlesectionletter="Times New Roman/GR/BI":color=0000ff at 12pt
+\font\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter="Times New Roman/GR/BI":color=0000ff at 12pt
+\font\examplesensearticlesectionletter="Times New Roman/GR/BI":color=0000ff at 12pt
+\font\firstoftypelastoftypesubentryarticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\examplefirstoftypelastoftypesubentryarticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\firstoftypeheadwordlastoftypearticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\firstoftypelastoftypepronunciationarticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\firstoftypevariantinflectionarticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\variantinflectionarticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\lastoftypevariantinflectionarticlesectionletter="Times New Roman/GR/I" at 12pt
+\font\exampleusefirstoftypelastoftypesensearticlesectionletter="Times New Roman/GR/BI":color=0000ff at 12pt
 
 \mbox{} 
 \newpage 
