--- a/src/Test/XeLatex/TestFiles/Expected/DisplayBlock.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/DisplayBlock.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\t="Times New Roman" at 14pt
-\font\xt="Times New Roman" at 14pt
-\font\vxt="Times New Roman" at 14pt
+\font\t="Times New Roman/GR" at 14pt
+\font\xt="Times New Roman/GR" at 14pt
+\font\vxt="Times New Roman/GR" at 14pt
 
 \mbox{} 
 \newpage 
