--- a/src/Test/XeLatex/TestFiles/Expected/EMTest1.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/EMTest1.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letData="Times New Roman" at 48pt
-\font\slotnameletData="Times New Roman" at 24pt
-\font\nameletData="Times New Roman" at 48pt
+\font\letData="Times New Roman/GR" at 48pt
+\font\slotnameletData="Times New Roman/GR" at 24pt
+\font\nameletData="Times New Roman/GR" at 48pt
 
 \mbox{} 
 \newpage 
