--- a/src/Test/XeLatex/TestFiles/Expected/Font1.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Font1.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Times New Roman" at 40pt
-\font\tbta="Verdana" at 20pt
+\font\ta="Times New Roman/GR" at 40pt
+\font\tbta="Verdana/GR" at 20pt
 
 \mbox{} 
 \newpage 
