--- a/src/Test/XeLatex/TestFiles/Expected/FontBoldItalic.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontBoldItalic.tex
@@ -20,27 +20,27 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Times New Roman" at 12pt
-\font\letterboldletHeaddicBody="Times New Roman/B" at 6.6pt
-\font\letterboldletterboldletHeaddicBody="Times New Roman/B" at 6.6pt
-\font\letteritalicletHeaddicBody="Times New Roman/I" at 24pt
-\font\letteritalicletteritalicletHeaddicBody="Times New Roman/I" at 24pt
-\font\letterbolditalicletHeaddicBody="Times New Roman/BI" at 24pt
-\font\letterbolditalicletterbolditalicletHeaddicBody="Times New Roman/BI" at 24pt
-\font\letterbolditalicunderlineletHeaddicBody="Times New Roman/BI" at 24pt
-\font\letterbolditalicunderlineletterbolditalicunderlineletHeaddicBody="Times New Roman/BI" at 24pt
-\font\letternormalletHeaddicBody="Times New Roman" at 24pt
-\font\letternormalletternormalletHeaddicBody="Times New Roman" at 24pt
-\font\letternormalboldletHeaddicBody="Times New Roman/B" at 24pt
-\font\letternormalboldletternormalboldletHeaddicBody="Times New Roman/B" at 24pt
-\font\letternormalitalicletHeaddicBody="Times New Roman/I" at 24pt
-\font\letternormalitalicletternormalitalicletHeaddicBody="Times New Roman/I" at 24pt
-\font\letternormalbolditalicletHeaddicBody="Times New Roman/BI" at 24pt
-\font\letternormalbolditalicletternormalbolditalicletHeaddicBody="Times New Roman/BI" at 24pt
-\font\letternormalunderlineletHeaddicBody="Times New Roman" at 24pt
-\font\letternormalunderlineletternormalunderlineletHeaddicBody="Times New Roman" at 24pt
-\font\letternormalbolditalicunderlineletHeaddicBody="Times New Roman/BI" at 24pt
-\font\letternormalbolditalicunderlineletternormalbolditalicunderlineletHeaddicBody="Times New Roman/BI" at 24pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letterboldletHeaddicBody="Times New Roman/GR/B" at 6.6pt
+\font\letterboldletterboldletHeaddicBody="Times New Roman/GR/B" at 6.6pt
+\font\letteritalicletHeaddicBody="Times New Roman/GR/I" at 24pt
+\font\letteritalicletteritalicletHeaddicBody="Times New Roman/GR/I" at 24pt
+\font\letterbolditalicletHeaddicBody="Times New Roman/GR/BI" at 24pt
+\font\letterbolditalicletterbolditalicletHeaddicBody="Times New Roman/GR/BI" at 24pt
+\font\letterbolditalicunderlineletHeaddicBody="Times New Roman/GR/BI" at 24pt
+\font\letterbolditalicunderlineletterbolditalicunderlineletHeaddicBody="Times New Roman/GR/BI" at 24pt
+\font\letternormalletHeaddicBody="Times New Roman/GR" at 24pt
+\font\letternormalletternormalletHeaddicBody="Times New Roman/GR" at 24pt
+\font\letternormalboldletHeaddicBody="Times New Roman/GR/B" at 24pt
+\font\letternormalboldletternormalboldletHeaddicBody="Times New Roman/GR/B" at 24pt
+\font\letternormalitalicletHeaddicBody="Times New Roman/GR/I" at 24pt
+\font\letternormalitalicletternormalitalicletHeaddicBody="Times New Roman/GR/I" at 24pt
+\font\letternormalbolditalicletHeaddicBody="Times New Roman/GR/BI" at 24pt
+\font\letternormalbolditalicletternormalbolditalicletHeaddicBody="Times New Roman/GR/BI" at 24pt
+\font\letternormalunderlineletHeaddicBody="Times New Roman/GR" at 24pt
+\font\letternormalunderlineletternormalunderlineletHeaddicBody="Times New Roman/GR" at 24pt
+\font\letternormalbolditalicunderlineletHeaddicBody="Times New Roman/GR/BI" at 24pt
+\font\letternormalbolditalicunderlineletternormalbolditalicunderlineletHeaddicBody="Times New Roman/GR/BI" at 24pt
 
 \mbox{} 
 \newpage 
