--- a/src/Test/XeLatex/TestFiles/Expected/FontFamily4.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontFamily4.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Times New Roman":color=ff0000 at 20pt
-\font\tbta="Arial":color=0000ff at 16pt
-\font\tctbta="Times New Roman":color=008000 at 32pt
+\font\ta="Times New Roman/GR":color=ff0000 at 20pt
+\font\tbta="Arial/GR":color=0000ff at 16pt
+\font\tctbta="Times New Roman/GR":color=008000 at 32pt
 
 \mbox{} 
 \newpage 
