--- a/src/Test/XeLatex/TestFiles/Expected/FontFamily6.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontFamily6.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\lettera="Arial":color=ff0000 at 24pt
-\font\letterb="Times New Roman":color=0000ff at 24pt
+\font\lettera="Arial/GR":color=ff0000 at 24pt
+\font\letterb="Times New Roman/GR":color=0000ff at 24pt
 
 \mbox{} 
 \newpage 
