--- a/src/Test/XeLatex/TestFiles/Expected/FontParent.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontParent.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\adicBody="Arial Black":color=ff0000 at 24pt
-\font\badicBody="Arial Black":color=0000ff at 24pt
+\font\adicBody="Arial Black/GR":color=ff0000 at 24pt
+\font\badicBody="Arial Black/GR":color=0000ff at 24pt
 
 \mbox{} 
 \newpage 
