--- a/src/Test/XeLatex/TestFiles/Expected/FontSizeXXSmall.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontSizeXXSmall.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letter="Times New Roman" at 6.6pt
-\font\lettercmletter="Times New Roman" at 6.6pt
+\font\letter="Times New Roman/GR" at 6.6pt
+\font\lettercmletter="Times New Roman/GR" at 6.6pt
 
 \mbox{} 
 \newpage 
