--- a/src/Test/XeLatex/TestFiles/Expected/FontStyleItalic.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontStyleItalic.tex
@@ -19,7 +19,7 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letter="Times New Roman/I" at 24pt
+\font\letter="Times New Roman/GR/I" at 24pt
 
 \mbox{} 
 \newpage 
