--- a/src/Test/XeLatex/TestFiles/Expected/FontStyleNormal.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontStyleNormal.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\normal="Times New Roman" at 24pt
-\font\italicnormal="Times New Roman/I" at 24pt
-\font\normalitalicnormal="Times New Roman" at 24pt
+\font\normal="Times New Roman/GR" at 24pt
+\font\italicnormal="Times New Roman/GR/I" at 24pt
+\font\normalitalicnormal="Times New Roman/GR" at 24pt
 
 \mbox{} 
 \newpage 
