--- a/src/Test/XeLatex/TestFiles/Expected/FontVariantNormal.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontVariantNormal.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letter="Times New Roman" at 24pt
-\font\normalletter="Times New Roman" at 24pt
+\font\letter="Times New Roman/GR" at 24pt
+\font\normalletter="Times New Roman/GR" at 24pt
 
 \mbox{} 
 \newpage 
