--- a/src/Test/XeLatex/TestFiles/Expected/FontWeightBoldRegular.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontWeightBoldRegular.tex
@@ -21,30 +21,30 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Times New Roman" at 12pt
-\font\letterletHeaddicBody="Charis SIL/B" at 24pt
-\font\letDatadicBody="Times New Roman" at 12pt
-\font\entryletDatadicBody="Times New Roman" at 10pt
-\font\headwordmcbentryletDatadicBody="Charis SIL/B" at 10pt
-\font\sensesentryletDatadicBody="Times New Roman" at 10pt
-\font\sensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\LexSensepublishStemPossessiveFormsensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\partofspeechesgrammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanespartofspeechesgrammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\subsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\sensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\xsensenumbersensesubsensessensesensesentryletDatadicBody="Times New Roman/B" at 10pt
-\font\grammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\partofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanespartofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\definitionessensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanesdefinitionessensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\LexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\spanmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\EmphasizedTextesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\FocusedmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman" at 10pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letterletHeaddicBody="Charis SIL/GR/B" at 24pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR" at 10pt
+\font\headwordmcbentryletDatadicBody="Charis SIL/GR/B" at 10pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexSensepublishStemPossessiveFormsensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\partofspeechesgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanespartofspeechesgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\subsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xsensenumbersensesubsensessensesensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\grammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\partofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanespartofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\definitionessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanesdefinitionessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\EmphasizedTextesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\FocusedmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
 
 \mbox{} 
 \newpage 
