--- a/src/Test/XeLatex/TestFiles/Expected/FontWeightNormal.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontWeightNormal.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\normal="Times New Roman" at 12pt
-\font\boldnormal="Times New Roman/B" at 24pt
-\font\normalboldnormal="Times New Roman" at 12pt
+\font\normal="Times New Roman/GR" at 12pt
+\font\boldnormal="Times New Roman/GR/B" at 24pt
+\font\normalboldnormal="Times New Roman/GR" at 12pt
 
 \mbox{} 
 \newpage 
