--- a/src/Test/XeLatex/TestFiles/Expected/HideVerseNumYes.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/HideVerseNumYes.tex
@@ -19,15 +19,15 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\divzxx="Charis SIL" at 12pt
-\font\spanzxx="Charis SIL" at 12pt
-\font\divaai="Charis SIL" at 14pt
-\font\spanaai="Charis SIL" at 12pt
-\font\scrSectionscrBody="Charis SIL" at 12pt
-\font\ParagraphscrSectionscrBody="Charis SIL" at 12pt
-\font\ChapterNumberaaiParagraphscrSectionscrBody="Charis SIL" at 12pt
-\font\VerseNumberaaiParagraphscrSectionscrBody="Charis SIL" at 12pt
-\font\spanaaiParagraphscrSectionscrBody="Charis SIL" at 12pt
+\font\divzxx="Charis SIL/GR" at 12pt
+\font\spanzxx="Charis SIL/GR" at 12pt
+\font\divaai="Charis SIL/GR" at 14pt
+\font\spanaai="Charis SIL/GR" at 12pt
+\font\scrSectionscrBody="Charis SIL/GR" at 12pt
+\font\ParagraphscrSectionscrBody="Charis SIL/GR" at 12pt
+\font\ChapterNumberaaiParagraphscrSectionscrBody="Charis SIL/GR" at 12pt
+\font\VerseNumberaaiParagraphscrSectionscrBody="Charis SIL/GR" at 12pt
+\font\spanaaiParagraphscrSectionscrBody="Charis SIL/GR" at 12pt
 
 \mbox{} 
 \newpage 
