--- a/src/Test/XeLatex/TestFiles/Expected/ImageBase.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/ImageBase.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\entrydicBody="Times New Roman" at 12pt
-\font\pictureRightentrydicBody="Times New Roman" at 12pt
-\font\picturepictureRightentrydicBody="Times New Roman" at 12pt
+\font\entrydicBody="Times New Roman/GR" at 12pt
+\font\pictureRightentrydicBody="Times New Roman/GR" at 12pt
+\font\picturepictureRightentrydicBody="Times New Roman/GR" at 12pt
 
 \mbox{} 
 \newpage 
