--- a/src/Test/XeLatex/TestFiles/Expected/Lang.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Lang.tex
@@ -19,11 +19,11 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemen="Times New Roman" at 20pt
-\font\xitempt="Times New Roman" at 30pt
-\font\entry="Times New Roman":color=0000FF at 12pt
-\font\xitemptentry="Times New Roman":color=0000FF at 30pt
-\font\xitemenentry="Times New Roman":color=0000FF at 20pt
+\font\xitemen="Times New Roman/GR" at 20pt
+\font\xitempt="Times New Roman/GR" at 30pt
+\font\entry="Times New Roman/GR":color=0000FF at 12pt
+\font\xitemptentry="Times New Roman/GR":color=0000FF at 30pt
+\font\xitemenentry="Times New Roman/GR":color=0000FF at 20pt
 
 \mbox{} 
 \newpage 
