--- a/src/Test/XeLatex/TestFiles/Expected/Larger.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Larger.tex
@@ -19,10 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\pa="Times New Roman" at 80pt
-\font\childapa="Times New Roman" at 120pt
-\font\childbpa="Times New Roman" at 53pt
-\font\childaenpa="Times New Roman" at 120pt
+\font\pa="Times New Roman/GR" at 80pt
+\font\childapa="Times New Roman/GR" at 120pt
+\font\childbpa="Times New Roman/GR" at 53pt
+\font\childaenpa="Times New Roman/GR" at 120pt
 
 \mbox{} 
 \newpage 
