--- a/src/Test/XeLatex/TestFiles/Expected/Letterspace.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Letterspace.tex
@@ -19,7 +19,7 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\t="Times New Roman":letterspace=24 at 12pt
+\font\t="Times New Roman/GR":letterspace=24 at 12pt
 
 \mbox{} 
 \newpage 
