--- a/src/Test/XeLatex/TestFiles/Expected/LineBreak.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/LineBreak.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\scrBookscrBody="Charis SIL" at 12pt
-\font\SectionHeadMinorscrBookscrBody="Charis SIL" at 12pt
-\font\spanbgtSectionHeadMinorscrBookscrBody="Charis SIL" at 12pt
+\font\scrBookscrBody="Charis SIL/GR" at 12pt
+\font\SectionHeadMinorscrBookscrBody="Charis SIL/GR" at 12pt
+\font\spanbgtSectionHeadMinorscrBookscrBody="Charis SIL/GR" at 12pt
 
 \mbox{} 
 \newpage 
