--- a/src/Test/XeLatex/TestFiles/Expected/NestedDivCase5.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/NestedDivCase5.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Times New Roman":color=ff0000 at 30pt
-\font\tbta="Times New Roman":color=ff0000 at 10pt
-\font\tctbta="Times New Roman":color=008000 at 5pt
+\font\ta="Times New Roman/GR":color=ff0000 at 30pt
+\font\tbta="Times New Roman/GR":color=ff0000 at 10pt
+\font\tctbta="Times New Roman/GR":color=008000 at 5pt
 
 \mbox{} 
 \newpage 
