--- a/src/Test/XeLatex/TestFiles/Expected/NestedSpan1.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/NestedSpan1.tex
@@ -20,9 +20,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Times New Roman":color=ff0000 at 32pt
-\font\tbta="Times New Roman":color=0000ff at 16pt
-\font\tctbta="Times New Roman":color=008000 at 8pt
+\font\ta="Times New Roman/GR":color=ff0000 at 32pt
+\font\tbta="Times New Roman/GR":color=0000ff at 16pt
+\font\tctbta="Times New Roman/GR":color=008000 at 8pt
 
 \mbox{} 
 \newpage 
