--- a/src/Test/XeLatex/TestFiles/Expected/PageBGColor.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/PageBGColor.tex
@@ -20,7 +20,7 @@
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
 \special{background cmyk 1 1 0 0}
-\font\t="Times New Roman" at 12pt
+\font\t="Times New Roman/GR" at 12pt
 
 \mbox{} 
 \newpage 
