--- a/src/Test/XeLatex/TestFiles/Expected/PageSize.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/PageSize.tex
@@ -19,7 +19,7 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\t="Times New Roman" at 12pt
+\font\t="Times New Roman/GR" at 12pt
 
 \mbox{} 
 \newpage 
