--- a/src/Test/XeLatex/TestFiles/Expected/Parent1.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Parent1.tex
@@ -19,12 +19,12 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemen="Times New Roman":color=ffa500 at 12pt
-\font\xitemmain="Times New Roman":color=ff0000 at 12pt
-\font\xitemenxitem="Times New Roman":color=008000 at 12pt
-\font\main="Times New Roman" at 12pt
-\font\xitemenmain="Times New Roman":color=008000 at 12pt
-\font\xitemxitemmain="Times New Roman":color=0000ff at 12pt
+\font\xitemen="Times New Roman/GR":color=ffa500 at 12pt
+\font\xitemmain="Times New Roman/GR":color=ff0000 at 12pt
+\font\xitemenxitem="Times New Roman/GR":color=008000 at 12pt
+\font\main="Times New Roman/GR" at 12pt
+\font\xitemenmain="Times New Roman/GR":color=008000 at 12pt
+\font\xitemxitemmain="Times New Roman/GR":color=0000ff at 12pt
 
 \mbox{} 
 \newpage 
