--- a/src/Test/XeLatex/TestFiles/Expected/PseudoAfter.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/PseudoAfter.tex
@@ -19,12 +19,12 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\div="Times New Roman" at 12pt
-\font\letHeaddiv="Times New Roman" at 25pt
-\font\letHeadafterdiv="Times New Roman":color=ffa500 at 18pt
-\font\entryletHeaddiv="Times New Roman" at 25pt
-\font\letHeadbdiv="Times New Roman" at 12pt
-\font\letHeadbafterdiv="Times New Roman":color=ffa500 at 18pt
+\font\div="Times New Roman/GR" at 12pt
+\font\letHeaddiv="Times New Roman/GR" at 25pt
+\font\letHeadafterdiv="Times New Roman/GR":color=ffa500 at 18pt
+\font\entryletHeaddiv="Times New Roman/GR" at 25pt
+\font\letHeadbdiv="Times New Roman/GR" at 12pt
+\font\letHeadbafterdiv="Times New Roman/GR":color=ffa500 at 18pt
 
 \mbox{} 
 \newpage 
