--- a/src/Test/XeLatex/TestFiles/Expected/TOCLetters.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/TOCLetters.tex
@@ -21,8 +21,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Times New Roman" at 12pt
-\font\letterletHeaddicBody="Charis SIL/B" at 24pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letterletHeaddicBody="Charis SIL/GR/B" at 24pt
 
 \mbox{} 
 \newpage 
