--- a/src/Test/XeLatex/TestFiles/Expected/TaggedText.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/TaggedText.tex
@@ -19,11 +19,11 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\div="Times New Roman":color=ff0000 at 12pt
-\font\divdiv="Times New Roman":color=ff0000 at 12pt
-\font\divheaderdiv="Times New Roman":color=ff0000 at 24pt
-\font\spandiv="Times New Roman":color=0000ff at 12pt
-\font\spanheaderdiv="Times New Roman":color=ff0000 at 18pt
+\font\div="Times New Roman/GR":color=ff0000 at 12pt
+\font\divdiv="Times New Roman/GR":color=ff0000 at 12pt
+\font\divheaderdiv="Times New Roman/GR":color=ff0000 at 24pt
+\font\spandiv="Times New Roman/GR":color=0000ff at 12pt
+\font\spanheaderdiv="Times New Roman/GR":color=ff0000 at 18pt
 
 \mbox{} 
 \newpage 
