--- a/src/Test/XeLatex/TestFiles/Expected/TextAlignRight.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/TextAlignRight.tex
@@ -19,7 +19,7 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\a="Times New Roman" at 12pt
+\font\a="Times New Roman/GR" at 12pt
 
 \mbox{} 
 \newpage 
