--- a/src/Test/XeLatex/TestFiles/Expected/TextFontSizeTestC.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/TextFontSizeTestC.tex
@@ -19,10 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letter="Arial Unicode MS/BI" at 12pt
-\font\letterbletter="Verdana/I" at 18pt
-\font\lettercletter="Arial Unicode MS/BI" at 6.6pt
-\font\salvationletter="Arial Unicode MS/BI" at 12pt
+\font\letter="Arial Unicode MS/GR/BI" at 12pt
+\font\letterbletter="Verdana/GR/I" at 18pt
+\font\lettercletter="Arial Unicode MS/GR/BI" at 6.6pt
+\font\salvationletter="Arial Unicode MS/GR/BI" at 12pt
 
 \mbox{} 
 \newpage 
