--- a/src/Test/XeLatex/TestFiles/Expected/TextIndent.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/TextIndent.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\t="Times New Roman" at 15pt
-\font\verset="Times New Roman" at 15pt
-\font\salvationt="Times New Roman" at 15pt
+\font\t="Times New Roman/GR" at 15pt
+\font\verset="Times New Roman/GR" at 15pt
+\font\salvationt="Times New Roman/GR" at 15pt
 
 \mbox{} 
 \newpage 
