--- a/src/Test/XeLatex/TestFiles/Expected/TextIndentPC.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/TextIndentPC.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\b="Times New Roman" at 15pt
-\font\c="Times New Roman" at 15pt
-\font\a="Times New Roman" at 15pt
+\font\b="Times New Roman/GR" at 15pt
+\font\c="Times New Roman/GR" at 15pt
+\font\a="Times New Roman/GR" at 15pt
 
 \mbox{} 
 \newpage 
