--- a/src/Test/XeLatex/TestFiles/Expected/TwoColumnInputCase.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/TwoColumnInputCase.tex
@@ -20,72 +20,72 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\diven="Times New Roman" at 12pt
-\font\spanen="Times New Roman" at 12pt
-\font\divggofonipaxemic="Charis SIL" at 12pt
-\font\spanggofonipaxemic="Charis SIL" at 12pt
-\font\divte="Gautami" at 12pt
-\font\spante="Gautami" at 12pt
-\font\divhi="Times New Roman" at 12pt
-\font\spanhi="Times New Roman" at 12pt
-\font\divggoTeluIN="Gautami" at 12pt
-\font\spanggoTeluIN="Gautami" at 12pt
-\font\xitemte="Gautami" at 10pt
-\font\xitemhi="Times New Roman" at 10pt
-\font\xitemxitemcomplexformformbefore="Gautami/B" at 10pt
-\font\xitemxitemcomplexformrefsbefore="Times New Roman" at 12pt
-\font\xitemxitemdefinitionbefore="Times New Roman" at 12pt
-\font\xitemxitementryrefcomponentbefore="Times New Roman" at 12pt
-\font\xitemxitementryreftypebefore="Times New Roman" at 12pt
-\font\xitemxitemexamplebefore="Gautami/I" at 10pt
-\font\xitemxitemexamplesbefore="Times New Roman" at 12pt
-\font\xitemxitemheadwordbefore="Gautami/B" at 10pt
-\font\xitemxitemLexEntrypublishStemComponentTargetMLHeadWordPubbefore="Gautami/B" at 10pt
-\font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Times New Roman" at 12pt
-\font\xitemxitemLexEntryTypepublishStemEntryTypeAbbreviationPubbefore="Times New Roman" at 12pt
-\font\xitemxitemLexSensepublishStemGlossPubLdbefore="Gautami" at 10pt
-\font\xitemxitemLexSensepublishStemGlossPubLebefore="Times New Roman" at 10pt
-\font\xitemxitempartofspeechbefore="Times New Roman" at 12pt
-\font\xitemxitempictureLabelbefore="Times New Roman" at 12pt
-\font\xitemxitemprimaryrefsbefore="Times New Roman" at 12pt
-\font\xitemxitempronunciationbefore="Charis SIL" at 10pt
-\font\xitemxitempronunciationsbefore="Times New Roman" at 12pt
-\font\sensesensesensesbefore="Times New Roman" at 12pt
-\font\xitemxitemtranslationbefore="Times New Roman" at 12pt
-\font\xitemxitemtranslationLdbefore="Gautami" at 10pt
-\font\xitemtpi="Times New Roman" at 12pt
-\font\letDatadicBody="Times New Roman" at 12pt
-\font\entryletDatadicBody="Times New Roman" at 10pt
-\font\pictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\picturepictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\pictureCaptionpictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\CmPicturepublishStemPileThumbnailPubafterpictureCaptionpictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\pictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman" at 10pt
-\font\headwordggoTeluINentryletDatadicBody="Gautami/B" at 10pt
-\font\headwordafterentryletDatadicBody="Gautami/B" at 10pt
-\font\pronunciationsentryletDatadicBody="Times New Roman" at 10pt
-\font\pronunciationsafterentryletDatadicBody="Times New Roman" at 10pt
-\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL" at 10pt
-\font\pronunciationbeforepronunciationsentryletDatadicBody="Charis SIL" at 10pt
-\font\pronunciationafterpronunciationsentryletDatadicBody="Charis SIL" at 10pt
-\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL" at 10pt
-\font\sensesentryletDatadicBody="Times New Roman" at 10pt
-\font\sensesafterentryletDatadicBody="Times New Roman" at 10pt
-\font\sensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\LexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Gautami" at 10pt
-\font\LexSensepublishStemGlossPubLdaftersensesensesentryletDatadicBody="Gautami" at 10pt
-\font\spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Gautami" at 10pt
-\font\examplessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\examplesaftersensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\exampleggoTeluINexamplessensesensesentryletDatadicBody="Gautami/I" at 10pt
-\font\exampleafterexamplessensesensesentryletDatadicBody="Gautami/I" at 10pt
-\font\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody="Gautami/I" at 10pt
-\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman" at 10pt
-\font\translationLdtetranslationsexamplessensesensesentryletDatadicBody="Gautami" at 10pt
-\font\translationLdaftertranslationsexamplessensesensesentryletDatadicBody="Gautami" at 10pt
-\font\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Gautami" at 10pt
+\font\diven="Times New Roman/GR" at 12pt
+\font\spanen="Times New Roman/GR" at 12pt
+\font\divggofonipaxemic="Charis SIL/GR" at 12pt
+\font\spanggofonipaxemic="Charis SIL/GR" at 12pt
+\font\divte="Gautami/GR" at 12pt
+\font\spante="Gautami/GR" at 12pt
+\font\divhi="Times New Roman/GR" at 12pt
+\font\spanhi="Times New Roman/GR" at 12pt
+\font\divggoTeluIN="Gautami/GR" at 12pt
+\font\spanggoTeluIN="Gautami/GR" at 12pt
+\font\xitemte="Gautami/GR" at 10pt
+\font\xitemhi="Times New Roman/GR" at 10pt
+\font\xitemxitemcomplexformformbefore="Gautami/GR/B" at 10pt
+\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionbefore="Times New Roman/GR" at 12pt
+\font\xitemxitementryrefcomponentbefore="Times New Roman/GR" at 12pt
+\font\xitemxitementryreftypebefore="Times New Roman/GR" at 12pt
+\font\xitemxitemexamplebefore="Gautami/GR/I" at 10pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemheadwordbefore="Gautami/GR/B" at 10pt
+\font\xitemxitemLexEntrypublishStemComponentTargetMLHeadWordPubbefore="Gautami/GR/B" at 10pt
+\font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemLexEntryTypepublishStemEntryTypeAbbreviationPubbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemLexSensepublishStemGlossPubLdbefore="Gautami/GR" at 10pt
+\font\xitemxitemLexSensepublishStemGlossPubLebefore="Times New Roman/GR" at 10pt
+\font\xitemxitempartofspeechbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempictureLabelbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationbefore="Charis SIL/GR" at 10pt
+\font\xitemxitempronunciationsbefore="Times New Roman/GR" at 12pt
+\font\sensesensesensesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemtranslationbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemtranslationLdbefore="Gautami/GR" at 10pt
+\font\xitemtpi="Times New Roman/GR" at 12pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\picturepictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\CmPicturepublishStemPileThumbnailPubafterpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\headwordggoTeluINentryletDatadicBody="Gautami/GR/B" at 10pt
+\font\headwordafterentryletDatadicBody="Gautami/GR/B" at 10pt
+\font\pronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pronunciationsafterentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pronunciationbeforepronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\pronunciationafterpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesafterentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\LexSensepublishStemGlossPubLdaftersensesensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\examplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\examplesaftersensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\exampleggoTeluINexamplessensesensesentryletDatadicBody="Gautami/GR/I" at 10pt
+\font\exampleafterexamplessensesensesentryletDatadicBody="Gautami/GR/I" at 10pt
+\font\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody="Gautami/GR/I" at 10pt
+\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\translationLdtetranslationsexamplessensesensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\translationLdaftertranslationsexamplessensesensesentryletDatadicBody="Gautami/GR" at 10pt
+\font\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Gautami/GR" at 10pt
 
 \mbox{} 
 \newpage 
