--- a/src/Test/XeLatex/TestFiles/Expected/UnicodeSymbol.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/UnicodeSymbol.tex
@@ -19,33 +19,33 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Times New Roman" at 12pt
-\font\letterletHeaddicBody="Times New Roman" at 12pt
-\font\letDatadicBody="Times New Roman" at 12pt
-\font\entryletDatadicBody="Times New Roman" at 12pt
-\font\headwordsehentryletDatadicBody="Times New Roman" at 12pt
-\font\xhomographnumberptheadwordsehentryletDatadicBody="Times New Roman" at 12pt
-\font\sensesentryletDatadicBody="Times New Roman" at 12pt
-\font\sensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xsensenumberLcensensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\partofspeechptgrammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\slotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xitemslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\slotnameptxitemslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\definitionLbptsensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xitemptdefinitionLbptsensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xitemendefinitionLbptsensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\slotnameptslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\relationantonymptsensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\relationantonymbeforesensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xitemptrelationantonymptsensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xlanguagetagenxitemptrelationantonymptsensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xitemenrelationantonymptsensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xlanguagetagenxitemenrelationantonymptsensesensesentryletDatadicBody="Times New Roman" at 12pt
-\font\xsensenumberLbensensesensesentryletDatadicBody="Times New Roman" at 12pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letterletHeaddicBody="Times New Roman/GR" at 12pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR" at 12pt
+\font\headwordsehentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xhomographnumberptheadwordsehentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xsensenumberLcensensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\partofspeechptgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\slotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xitemslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\slotnameptxitemslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\definitionLbptsensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xitemptdefinitionLbptsensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xitemendefinitionLbptsensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\slotnameptslotsgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\relationantonymptsensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\relationantonymbeforesensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xitemptrelationantonymptsensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xlanguagetagenxitemptrelationantonymptsensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xitemenrelationantonymptsensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xlanguagetagenxitemenrelationantonymptsensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
+\font\xsensenumberLbensensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
 
 \mbox{} 
 \newpage 
