--- a/src/Test/XeLatex/TestFiles/Expected/multiClass.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/multiClass.tex
@@ -19,12 +19,12 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\main="Times New Roman" at 12pt
-\font\abcmain="Times New Roman":color=ffa500 at 24pt
-\font\amain="Times New Roman":color=0000ff at 18pt
-\font\bmain="Times New Roman":color=ff0000 at 12pt
-\font\abenmain="Times New Roman":color=0000ff at 18pt
-\font\acmain="Times New Roman":color=ffa500 at 18pt
+\font\main="Times New Roman/GR" at 12pt
+\font\abcmain="Times New Roman/GR":color=ffa500 at 24pt
+\font\amain="Times New Roman/GR":color=0000ff at 18pt
+\font\bmain="Times New Roman/GR":color=ff0000 at 12pt
+\font\abenmain="Times New Roman/GR":color=0000ff at 18pt
+\font\acmain="Times New Roman/GR":color=ffa500 at 18pt
 
 \mbox{} 
 \newpage 
